@@ -1,5 +1,6 @@
 package io.kestra.cli.commands.flows.namespaces;
 
+import io.kestra.cli.AbstractValidateCommand;
 import io.kestra.cli.commands.AbstractServiceNamespaceUpdateCommand;
 import io.kestra.cli.commands.flows.FlowValidateCommand;
 import io.kestra.cli.commands.flows.IncludeHelperExpander;
@@ -19,7 +20,6 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @CommandLine.Command(
     name = "update",
@@ -31,7 +31,7 @@ public class FlowNamespaceUpdateCommand extends AbstractServiceNamespaceUpdateCo
     @Inject
     public YamlFlowParser yamlFlowParser;
 
-
+    @SuppressWarnings("deprecation")
     @Override
     public Integer call() throws Exception {
         super.call();
@@ -47,7 +47,7 @@ public class FlowNamespaceUpdateCommand extends AbstractServiceNamespaceUpdateCo
                         throw new RuntimeException(e);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
             String body = "";
             if (flows.isEmpty()) {
@@ -67,11 +67,11 @@ public class FlowNamespaceUpdateCommand extends AbstractServiceNamespaceUpdateCo
                 stdOut(updated.size() + " flow(s) for namespace '" + namespace + "' successfully updated !");
                 updated.forEach(flow -> stdOut("- " + flow.getNamespace() + "."  + flow.getId()));
             } catch (HttpClientResponseException e){
-                FlowValidateCommand.handleHttpException(e, "flow");
+                AbstractValidateCommand.handleHttpException(e, "flow");
                 return 1;
             }
         } catch (ConstraintViolationException e) {
-            FlowValidateCommand.handleException(e, "flow");
+            AbstractValidateCommand.handleException(e, "flow");
 
             return 1;
         }
