@@ -10,30 +10,27 @@ import io.kestra.core.exceptions.DeserializationException;
 import io.kestra.core.metrics.MetricRegistry;
 import io.kestra.core.models.Label;
 import io.kestra.core.models.executions.*;
+import io.kestra.core.models.flows.State;
 import io.kestra.core.models.tasks.RunnableTask;
 import io.kestra.core.models.tasks.Task;
-import io.kestra.core.models.triggers.PollingTriggerInterface;
-import io.kestra.core.models.triggers.RealtimeTriggerInterface;
-import io.kestra.core.models.triggers.TriggerContext;
-import io.kestra.core.queues.QueueException;
-import io.kestra.core.queues.QueueFactoryInterface;
-import io.kestra.core.queues.QueueInterface;
-import io.kestra.core.queues.WorkerJobQueueInterface;
+import io.kestra.core.models.triggers.*;
+import io.kestra.core.queues.*;
 import io.kestra.core.serializers.JacksonMapper;
+import io.kestra.core.server.Metric;
 import io.kestra.core.server.ServerConfig;
 import io.kestra.core.server.Service;
 import io.kestra.core.server.ServiceStateChangeEvent;
 import io.kestra.core.services.LogService;
 import io.kestra.core.services.WorkerGroupService;
-import io.kestra.core.tasks.flows.WorkingDirectory;
 import io.kestra.core.utils.Await;
 import io.kestra.core.utils.ExecutorsUtils;
 import io.kestra.core.utils.Hashing;
-import io.micronaut.context.ApplicationContext;
+import io.kestra.plugin.core.flow.WorkingDirectory;
 import io.micronaut.context.annotation.Parameter;
 import io.micronaut.context.event.ApplicationEventPublisher;
 import io.micronaut.core.annotation.Introspected;
 import io.micronaut.core.annotation.Nullable;
+import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
@@ -46,12 +43,12 @@ import org.slf4j.event.Level;
 
 import java.io.IOException;
 import java.time.Duration;
+import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.*;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
@@ -61,14 +58,12 @@ import static io.kestra.core.server.Service.ServiceState.TERMINATED_FORCED;
 import static io.kestra.core.server.Service.ServiceState.TERMINATED_GRACEFULLY;
 import static io.kestra.core.utils.Rethrow.throwFunction;
 
+@SuppressWarnings("this-escape")
 @Slf4j
 @Introspected
 public class Worker implements Service, Runnable, AutoCloseable {
-    private final static ObjectMapper MAPPER = JacksonMapper.ofJson();
+    private static final ObjectMapper MAPPER = JacksonMapper.ofJson();
     private static final String SERVICE_PROPS_WORKER_GROUP = "worker.group";
-
-    @Inject
-    private ApplicationContext applicationContext;
 
     @Inject
     private WorkerJobQueueInterface workerJobQueue;
@@ -90,6 +85,10 @@ public class Worker implements Service, Runnable, AutoCloseable {
     private QueueInterface<MetricEntry> metricEntryQueue;
 
     @Inject
+    @Named(QueueFactoryInterface.TRIGGER_NAMED)
+    private QueueInterface<Trigger> triggerQueue;
+
+    @Inject
     private MetricRegistry metricRegistry;
 
     @Inject
@@ -97,6 +96,12 @@ public class Worker implements Service, Runnable, AutoCloseable {
 
     @Inject
     private LogService logService;
+
+    @Inject
+    private RunContextInitializer runContextInitializer;
+
+    @Inject
+    private RunContextLoggerFactory runContextLoggerFactory;
 
     private final Set<String> killedExecution = ConcurrentHashMap.newKeySet();
 
@@ -107,7 +112,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
     @Getter
     private final Map<String, AtomicInteger> evaluateTriggerRunningCount = new ConcurrentHashMap<>();
 
-    private final List<AbstractWorkerThread> workerThreadReferences = new ArrayList<>();
+    private final List<AbstractWorkerCallable> workerCallableReferences = new ArrayList<>();
 
     private final ApplicationEventPublisher<ServiceStateChangeEvent> eventPublisher;
 
@@ -118,12 +123,17 @@ public class Worker implements Service, Runnable, AutoCloseable {
 
     private final String id;
 
-    // package private to allow its usage within tests
-    final ExecutorService executorService;
+    private final ExecutorService executorService;
 
     private final AtomicBoolean shutdown = new AtomicBoolean(false);
 
     private final AtomicReference<ServiceState> state = new AtomicReference<>();
+
+    private final List<Runnable> receiveCancellations = new ArrayList<>();
+
+    private final Integer numThreads;
+    private final AtomicInteger pendingJobCount = new AtomicInteger(0);
+    private final AtomicInteger runningJobCount = new AtomicInteger(0);
 
     /**
      * Creates a new {@link Worker} instance.
@@ -142,35 +152,39 @@ public class Worker implements Service, Runnable, AutoCloseable {
         ExecutorsUtils executorsUtils
     ) {
         this.id = workerId;
+        this.numThreads = numThreads;
         this.workerGroup = workerGroupService.resolveGroupFromKey(workerGroupKey);
         this.eventPublisher = eventPublisher;
         this.executorService = executorsUtils.maxCachedThreadPool(numThreads, "worker");
-        setState(ServiceState.CREATED);
+        this.setState(ServiceState.CREATED);
     }
 
-    @SuppressWarnings("unchecked")
-    @VisibleForTesting
-    @Deprecated(forRemoval = true)
-    public Worker(
-        ApplicationContext context,
-        Integer numThreads,
-        String workerGroupKey
-    ) {
-        this(
-            UUID.randomUUID().toString(),
-            numThreads,
-            workerGroupKey,
-            context.getBean(ApplicationEventPublisher.class),
-            context.getBean(WorkerGroupService.class),
-            context.getBean(ExecutorsUtils.class)
+    @PostConstruct
+    void initMetrics() {
+        String[] tags = this.workerGroup == null ? new String[0] : new String[] { MetricRegistry.TAG_WORKER_GROUP, this.workerGroup };
+        // create metrics to store thread count, pending jobs and running jobs, so we can have autoscaling easily
+        this.metricRegistry.gauge(MetricRegistry.METRIC_WORKER_JOB_THREAD_COUNT, numThreads, tags);
+        this.metricRegistry.gauge(MetricRegistry.METRIC_WORKER_JOB_PENDING_COUNT, pendingJobCount, tags);
+        this.metricRegistry.gauge(MetricRegistry.METRIC_WORKER_JOB_RUNNING_COUNT, runningJobCount, tags);
+    }
+
+    @Override
+    public Set<Metric> getMetrics() {
+        if (this.metricRegistry == null) {
+            // can arrive if called before the instance is fully created
+            return Collections.emptySet();
+        }
+
+        return Set.of(
+            Metric.of(this.metricRegistry.findGauge(MetricRegistry.METRIC_WORKER_JOB_THREAD_COUNT)),
+            Metric.of(this.metricRegistry.findGauge(MetricRegistry.METRIC_WORKER_JOB_PENDING_COUNT)),
+            Metric.of(this.metricRegistry.findGauge(MetricRegistry.METRIC_WORKER_JOB_RUNNING_COUNT))
         );
-        context.inject(this);
     }
 
     @Override
     public void run() {
-        setState(ServiceState.RUNNING);
-        this.executionKilledQueue.receive(executionKilled -> {
+        this.receiveCancellations.addFirst(this.executionKilledQueue.receive(executionKilled -> {
             if (executionKilled == null || !executionKilled.isLeft()) {
                 return;
             }
@@ -183,46 +197,55 @@ public class Worker implements Service, Runnable, AutoCloseable {
 
             synchronized (this) {
                 if (executionKilled.getLeft() instanceof ExecutionKilledExecution executionKilledExecution) {
-                    // @FIXME: the hashset will never expire killed execution
                     killedExecution.add(executionKilledExecution.getExecutionId());
 
-                    workerThreadReferences
+                    workerCallableReferences
                         .stream()
-                        .filter(workerThread -> workerThread instanceof WorkerTaskThread)
-                        .map(workerThread -> (WorkerTaskThread) workerThread)
-                        .filter(workerThread -> executionKilledExecution.isEqual(workerThread.getWorkerTask()))
-                        .forEach(AbstractWorkerThread::kill);
+                        .filter(workerCallable -> workerCallable instanceof WorkerTaskCallable)
+                        .map(workerCallable -> (WorkerTaskCallable) workerCallable)
+                        .filter(workerCallable -> executionKilledExecution.isEqual(workerCallable.getWorkerTask()))
+                        .forEach(AbstractWorkerCallable::kill);
                 } else if (executionKilled.getLeft() instanceof ExecutionKilledTrigger executionKilledTrigger) {
-                    workerThreadReferences
+                    workerCallableReferences
                         .stream()
-                        .filter(workerThread -> workerThread instanceof AbstractWorkerTriggerThread)
-                        .map(workerThread -> (AbstractWorkerTriggerThread) workerThread)
-                        .filter(workerThread -> executionKilledTrigger.isEqual(workerThread.getWorkerTrigger().getTriggerContext()))
-                        .forEach(AbstractWorkerThread::kill);
+                        .filter(workerCallable -> workerCallable instanceof AbstractWorkerTriggerCallable)
+                        .map(workerCallable -> (AbstractWorkerTriggerCallable) workerCallable)
+                        .filter(workerCallable -> executionKilledTrigger.isEqual(workerCallable.getWorkerTrigger().getTriggerContext()))
+                        .forEach(AbstractWorkerCallable::kill);
                 }
             }
-        });
+        }));
 
-        this.workerJobQueue.receive(
+        this.receiveCancellations.addFirst(this.workerJobQueue.receive(
             this.workerGroup,
             Worker.class,
             either -> {
-                executorService.execute(() -> {
-                    if (either.isRight()) {
-                        log.error("Unable to deserialize a worker job: {}", either.getRight().getMessage());
-                        handleDeserializationError(either.getRight());
-                        return;
-                    }
+                pendingJobCount.incrementAndGet();
 
-                    WorkerJob workerTask = either.getLeft();
-                    if (workerTask instanceof WorkerTask task) {
-                        handleTask(task);
-                    } else if (workerTask instanceof WorkerTrigger trigger) {
-                        handleTrigger(trigger);
+                executorService.execute(() -> {
+                    pendingJobCount.decrementAndGet();
+                    runningJobCount.incrementAndGet();
+
+                    try {
+                        if (either.isRight()) {
+                            log.error("Unable to deserialize a worker job: {}", either.getRight().getMessage());
+                            handleDeserializationError(either.getRight());
+                            return;
+                        }
+
+                        WorkerJob workerTask = either.getLeft();
+                        if (workerTask instanceof WorkerTask task) {
+                            handleTask(task);
+                        } else if (workerTask instanceof WorkerTrigger trigger) {
+                            handleTrigger(trigger);
+                        }
+                    } finally {
+                        runningJobCount.decrementAndGet();
                     }
                 });
             }
-        );
+        ));
+        setState(ServiceState.RUNNING);
     }
 
     private void setState(final ServiceState state) {
@@ -247,7 +270,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
                     var workerTriggerResult = WorkerTriggerResult.builder().triggerContext(triggerContext).success(false).execution(Optional.empty()).build();
                     this.workerTriggerResultQueue.emit(workerTriggerResult);
                 }
-            } catch (IOException e) {
+            } catch (IOException | QueueException e) {
                 // ignore the message if we cannot do anything about it
                 log.error("Unexpected exception when trying to handle a deserialization error", e);
             }
@@ -258,16 +281,22 @@ public class Worker implements Service, Runnable, AutoCloseable {
         if (workerTask.getTask() instanceof RunnableTask) {
             this.run(workerTask, true);
         } else if (workerTask.getTask() instanceof WorkingDirectory workingDirectory) {
-            RunContext runContext = workerTask.getRunContext().forWorkingDirectory(applicationContext, workerTask);
+
+            DefaultRunContext runContext = runContextInitializer.forWorkingDirectory(((DefaultRunContext) workerTask.getRunContext()), workerTask);
+            final RunContext workingDirectoryRunContext = runContext.clone();
 
             try {
                 // preExecuteTasks
                 try {
-                    workingDirectory.preExecuteTasks(runContext, workerTask.getTaskRun());
+                    workingDirectory.preExecuteTasks(workingDirectoryRunContext, workerTask.getTaskRun());
                 } catch (Exception e) {
-                    runContext.logger().error("Failed preExecuteTasks on WorkingDirectory: {}", e.getMessage(), e);
+                    workingDirectoryRunContext.logger().error("Failed preExecuteTasks on WorkingDirectory: {}", e.getMessage(), e);
                     workerTask = workerTask.fail();
-                    this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask));
+                    try {
+                        this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask));
+                    } catch (QueueException ex) {
+                        log.error("Unable to emit the worker task result for task {} taskrun {}", workerTask.getTask().getId(), workerTask.getTaskRun().getId(), e);
+                    }
                     this.logTerminated(workerTask);
                     return;
                 }
@@ -280,7 +309,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
                     WorkerTask currentWorkerTask = workingDirectory.workerTask(
                         workerTask.getTaskRun(),
                         currentTask,
-                        runContext
+                        runContextInitializer.forPlugin(runContext, currentTask)
                     );
 
                     // all tasks will be handled immediately by the worker
@@ -290,32 +319,29 @@ public class Worker implements Service, Runnable, AutoCloseable {
                         break;
                     }
 
-                    runContext = runContext.updateVariables(workerTaskResult, workerTask.getTaskRun());
+                    // create the next RunContext populated with the previous WorkerTaskResult
+                    runContext = runContextInitializer.forWorker(runContext.clone(), workerTaskResult, workerTask.getTaskRun());
                 }
-                
+
                 // postExecuteTasks
                 try {
-                    workingDirectory.postExecuteTasks(runContext, workerTask.getTaskRun());
+                    workingDirectory.postExecuteTasks(workingDirectoryRunContext, workerTask.getTaskRun());
                 } catch (Exception e) {
-                    runContext.logger().error("Failed postExecuteTasks on WorkingDirectory: {}", e.getMessage(), e);
+                    workingDirectoryRunContext.logger().error("Failed postExecuteTasks on WorkingDirectory: {}", e.getMessage(), e);
                     workerTask = workerTask.fail();
-                    this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask));
-                    this.logTerminated(workerTask);
-                    return;
+                    try {
+                        this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask));
+                    } catch (QueueException ex) {
+                        log.error("Unable to emit the worker task result for task {} taskrun {}", workerTask.getTask().getId(), workerTask.getTaskRun().getId(), e);
+                    }
                 }
             } finally {
                 runContext.cleanup();
+                this.logTerminated(workerTask);
             }
         } else {
             throw new RuntimeException("Unable to process the task '" + workerTask.getTask().getId() + "' as it's not a runnable task");
         }
-    }
-
-
-    private RunContext initRunContextForTrigger(WorkerTrigger workerTrigger) {
-        return workerTrigger.getConditionContext()
-            .getRunContext()
-            .forWorker(this.applicationContext, workerTrigger);
     }
 
     private void publishTriggerExecution(WorkerTrigger workerTrigger, Optional<Execution> evaluate) {
@@ -344,13 +370,17 @@ public class Worker implements Service, Runnable, AutoCloseable {
             );
         }
 
-        this.workerTriggerResultQueue.emit(
-            WorkerTriggerResult.builder()
-                .execution(evaluate)
-                .triggerContext(workerTrigger.getTriggerContext())
-                .trigger(workerTrigger.getTrigger())
-                .build()
-        );
+        try {
+            this.workerTriggerResultQueue.emit(
+                WorkerTriggerResult.builder()
+                    .execution(evaluate)
+                    .triggerContext(workerTrigger.getTriggerContext())
+                    .trigger(workerTrigger.getTrigger())
+                    .build()
+            );
+        } catch (QueueException e) {
+            handleTriggerError(workerTrigger, e);
+        }
     }
 
     private void handleTriggerError(WorkerTrigger workerTrigger, Throwable e) {
@@ -359,13 +389,58 @@ public class Worker implements Service, Runnable, AutoCloseable {
             .increment();
 
         logError(workerTrigger, e);
-        this.workerTriggerResultQueue.emit(
-            WorkerTriggerResult.builder()
-                .success(false)
-                .triggerContext(workerTrigger.getTriggerContext())
-                .trigger(workerTrigger.getTrigger())
-                .build()
+        try {
+            this.workerTriggerResultQueue.emit(
+                WorkerTriggerResult.builder()
+                    .success(false)
+                    .triggerContext(workerTrigger.getTriggerContext())
+                    .trigger(workerTrigger.getTrigger())
+                    .build()
+            );
+        } catch (QueueException ex) {
+            log.error("Unable to send the worker trigger result {}.{}.{}",
+                workerTrigger.getTriggerContext().getNamespace(), workerTrigger.getTriggerContext().getFlowId(), workerTrigger.getTriggerContext().getTriggerId(), ex);
+        }
+    }
+
+    private void handleRealtimeTriggerError(WorkerTrigger workerTrigger, Throwable e) {
+        metricRegistry
+            .counter(MetricRegistry.METRIC_WORKER_TRIGGER_ERROR_COUNT, metricRegistry.tags(workerTrigger, workerGroup))
+            .increment();
+
+        // We create a FAILED execution, so the user is aware that the realtime trigger failed to be created
+        var execution = TriggerService
+            .generateRealtimeExecution(workerTrigger.getTrigger(), workerTrigger.getConditionContext(), workerTrigger.getTriggerContext(), null)
+            .withState(FAILED);
+
+        // We create an ERROR log attached to the execution
+        Logger logger = workerTrigger.getConditionContext().getRunContext().logger();
+        logService.logExecution(
+            execution,
+            logger,
+            Level.ERROR,
+            "[date: {}] Realtime trigger failed to be created in the worker with error: {}",
+            workerTrigger.getTriggerContext().getDate(),
+            e != null ? e.getMessage() : "unknown",
+            e
         );
+        if (logger.isTraceEnabled() && e != null) {
+            logger.trace(Throwables.getStackTraceAsString(e));
+        }
+
+        try {
+            this.workerTriggerResultQueue.emit(
+                WorkerTriggerResult.builder()
+                    .success(false)
+                    .execution(Optional.of(execution))
+                    .triggerContext(workerTrigger.getTriggerContext())
+                    .trigger(workerTrigger.getTrigger())
+                    .build()
+            );
+        } catch (QueueException ex) {
+            log.error("Unable to send the worker trigger result {}.{}.{}",
+                workerTrigger.getTriggerContext().getNamespace(), workerTrigger.getTriggerContext().getFlowId(), workerTrigger.getTriggerContext().getTriggerId(), ex);
+        }
     }
 
     private void handleTrigger(WorkerTrigger workerTrigger) {
@@ -373,49 +448,61 @@ public class Worker implements Service, Runnable, AutoCloseable {
             .counter(MetricRegistry.METRIC_WORKER_TRIGGER_STARTED_COUNT, metricRegistry.tags(workerTrigger, workerGroup))
             .increment();
 
+        // update the trigger so that it contains the workerId
+        var trigger = workerTrigger.getTriggerContext();
+        trigger.setWorkerId(this.id);
+        try {
+            triggerQueue.emit(trigger);
+        } catch (QueueException e) {
+            handleTriggerError(workerTrigger, e);
+        }
+
         this.metricRegistry
-            .timer(MetricRegistry.METRIC_WORKER_TRIGGER_DURATION, metricRegistry.tags(workerTrigger.getTriggerContext(), workerGroup))
+            .timer(MetricRegistry.METRIC_WORKER_TRIGGER_DURATION, metricRegistry.tags(workerTrigger, workerGroup))
             .record(() -> {
                     StopWatch stopWatch = new StopWatch();
                     stopWatch.start();
 
                     this.evaluateTriggerRunningCount.computeIfAbsent(workerTrigger.getTriggerContext().uid(), s -> metricRegistry
-                        .gauge(MetricRegistry.METRIC_WORKER_TRIGGER_RUNNING_COUNT, new AtomicInteger(0), metricRegistry.tags(workerTrigger.getTriggerContext(), workerGroup)));
+                        .gauge(MetricRegistry.METRIC_WORKER_TRIGGER_RUNNING_COUNT, new AtomicInteger(0), metricRegistry.tags(workerTrigger, workerGroup)));
                     this.evaluateTriggerRunningCount.get(workerTrigger.getTriggerContext().uid()).addAndGet(1);
 
+                    DefaultRunContext runContext = (DefaultRunContext)workerTrigger.getConditionContext().getRunContext();
+                    runContextInitializer.forWorker(runContext, workerTrigger);
                     try {
-                        RunContext runContext = this.initRunContextForTrigger(workerTrigger);
 
                         logService.logTrigger(
                             workerTrigger.getTriggerContext(),
-                            workerTrigger.getConditionContext().getRunContext().logger(),
+                            runContext.logger(),
                             Level.INFO,
                             "Type {} started",
                             workerTrigger.getTrigger().getType()
                         );
 
                         if (workerTrigger.getTrigger() instanceof PollingTriggerInterface pollingTrigger) {
-                            WorkerTriggerThread workerThread = new WorkerTriggerThread(workerTrigger, pollingTrigger);
-                            io.kestra.core.models.flows.State.Type state = runThread(workerThread, runContext.logger());
+                            WorkerTriggerCallable workerCallable = new WorkerTriggerCallable(runContext, workerTrigger, pollingTrigger);
+                            io.kestra.core.models.flows.State.Type state = callJob(workerCallable);
 
-                            if (workerThread.getException() != null || !state.equals(SUCCESS)) {
-                                this.handleTriggerError(workerTrigger, workerThread.getException());
+                            if (workerCallable.getException() != null || !state.equals(SUCCESS)) {
+                                this.handleTriggerError(workerTrigger, workerCallable.getException());
                             }
 
                             if (!state.equals(FAILED)) {
-                                this.publishTriggerExecution(workerTrigger, workerThread.getEvaluate());
+                                this.publishTriggerExecution(workerTrigger, workerCallable.getEvaluate());
                             }
                         } else if (workerTrigger.getTrigger() instanceof RealtimeTriggerInterface streamingTrigger) {
-                            WorkerTriggerRealtimeThread workerThread = new WorkerTriggerRealtimeThread(
+                            WorkerTriggerRealtimeCallable workerCallable = new WorkerTriggerRealtimeCallable(
+                                runContext,
                                 workerTrigger,
                                 streamingTrigger,
                                 throwable -> this.handleTriggerError(workerTrigger, throwable),
                                 execution -> this.publishTriggerExecution(workerTrigger, Optional.of(execution))
                             );
-                            io.kestra.core.models.flows.State.Type state = runThread(workerThread, runContext.logger());
+                            io.kestra.core.models.flows.State.Type state = callJob(workerCallable);
 
-                            if (workerThread.getException() != null || !state.equals(SUCCESS)) {
-                                this.handleTriggerError(workerTrigger, workerThread.getException());
+                            // here the realtime trigger fail before the publisher being call so we create a fail execution
+                            if (workerCallable.getException() != null || !state.equals(SUCCESS)) {
+                                this.handleRealtimeTriggerError(workerTrigger, workerCallable.getException());
                             }
                         }
                     } catch (Exception e) {
@@ -425,7 +512,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
 
                         logService.logTrigger(
                             workerTrigger.getTriggerContext(),
-                            workerTrigger.getConditionContext().getRunContext().logger(),
+                            runContext.logger(),
                             Level.INFO,
                             "Type {} completed in {}",
                             workerTrigger.getTrigger().getType(),
@@ -456,7 +543,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
         }
     }
 
-    private WorkerTaskResult run(WorkerTask workerTask, Boolean cleanUp) throws QueueException {
+    private WorkerTaskResult run(WorkerTask workerTask, Boolean cleanUp) {
         metricRegistry
             .counter(MetricRegistry.METRIC_WORKER_STARTED_COUNT, metricRegistry.tags(workerTask, workerGroup))
             .increment();
@@ -473,11 +560,16 @@ public class Worker implements Service, Runnable, AutoCloseable {
             workerTask = workerTask.withTaskRun(workerTask.getTaskRun().withState(KILLED));
 
             WorkerTaskResult workerTaskResult = new WorkerTaskResult(workerTask);
-            this.workerTaskResultQueue.emit(workerTaskResult);
+            try {
+                this.workerTaskResultQueue.emit(workerTaskResult);
+            } catch (QueueException ex) {
+                log.error("Unable to emit the worker task result for task {} taskrun {}", workerTask.getTask().getId(), workerTask.getTaskRun().getId(), ex);
+            }
 
             this.logTerminated(workerTask);
 
-            //FIXME should we remove it from the killedExecution set ?
+            // We cannot remove the execution ID from the killedExecution in case the worker is processing multiple tasks of the execution
+            // which can happens due to parallel processing.
 
             return workerTaskResult;
         }
@@ -491,65 +583,74 @@ public class Worker implements Service, Runnable, AutoCloseable {
         );
 
         workerTask = workerTask.withTaskRun(workerTask.getTaskRun().withState(RUNNING));
-        this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask));
-
-        AtomicReference<WorkerTask> current = new AtomicReference<>(workerTask);
-
-        // run
-        WorkerTask finalWorkerTask = this.runAttempt(current.get());
-
-        // save dynamic WorkerResults since cleanUpTransient will remove them
-        List<WorkerTaskResult> dynamicWorkerResults = finalWorkerTask.getRunContext().dynamicWorkerResults();
-
-        // remove tmp directory
-        if (cleanUp) {
-            finalWorkerTask.getRunContext().cleanup();
-        }
-
-        finalWorkerTask = this.cleanUpTransient(finalWorkerTask);
-
-        // get last state
-        TaskRunAttempt lastAttempt = finalWorkerTask.getTaskRun().lastAttempt();
-        if (lastAttempt == null) {
-            throw new IllegalStateException("Can find lastAttempt on taskRun '" +
-                finalWorkerTask.getTaskRun().toString(true) + "'"
-            );
-        }
-        io.kestra.core.models.flows.State.Type state = lastAttempt.getState().getCurrent();
-
-        if (workerTask.getTask().getRetry() != null &&
-            workerTask.getTask().getRetry().getWarningOnRetry() &&
-            finalWorkerTask.getTaskRun().attemptNumber() > 1 &&
-            state == SUCCESS
-        ) {
-            state = WARNING;
-        }
-
-        if (workerTask.getTask().isAllowFailure() && !finalWorkerTask.getTaskRun().shouldBeRetried(workerTask.getTask().getRetry()) && state.isFailed()) {
-            state = WARNING;
-        }
-
-        // emit
-        finalWorkerTask = finalWorkerTask.withTaskRun(finalWorkerTask.getTaskRun().withState(state));
-
-        // if resulting object can't be emitted (mostly size of message), we just can't emit it like that.
-        // So we just tried to fail the status of the worker task, in this case, no log can't be added, just
-        // changing status must work in order to finish current task (except if we are near the upper bound size).
         try {
+            this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask));
+        } catch (QueueException e) {
+            log.error("Unable to emit the worker task result for task {} taskrun {}", workerTask.getTask().getId(), workerTask.getTaskRun().getId(), e);
+        }
+
+        WorkerTask finalWorkerTask = null;
+        try {
+            AtomicReference<WorkerTask> current = new AtomicReference<>(workerTask);
+
+            // run
+            WorkerTask workerTaskAttempt = this.runAttempt(current.get());
+
+            // save dynamic WorkerResults since cleanUpTransient will remove them
+            List<WorkerTaskResult> dynamicWorkerResults = workerTaskAttempt.getRunContext().dynamicWorkerResults();
+
+            finalWorkerTask = this.cleanUpTransient(workerTaskAttempt);
+
+            // get last state
+            TaskRunAttempt lastAttempt = finalWorkerTask.getTaskRun().lastAttempt();
+            if (lastAttempt == null) {
+                throw new IllegalStateException("Can find lastAttempt on taskRun '" +
+                    finalWorkerTask.getTaskRun().toString(true) + "'"
+                );
+            }
+            io.kestra.core.models.flows.State.Type state = lastAttempt.getState().getCurrent();
+
+            if (workerTask.getTask().getRetry() != null &&
+                workerTask.getTask().getRetry().getWarningOnRetry() &&
+                workerTask.getTaskRun().attemptNumber() > 1 &&
+                state == SUCCESS
+            ) {
+                state = WARNING;
+            }
+
+            if (workerTask.getTask().isAllowFailure() && !finalWorkerTask.getTaskRun().shouldBeRetried(workerTask.getTask().getRetry()) && state.isFailed()) {
+                state = WARNING;
+            }
+
+            // emit
+            finalWorkerTask = finalWorkerTask.withTaskRun(finalWorkerTask.getTaskRun().withState(state));
+
             WorkerTaskResult workerTaskResult = new WorkerTaskResult(finalWorkerTask, dynamicWorkerResults);
             this.workerTaskResultQueue.emit(workerTaskResult);
             return workerTaskResult;
         } catch (QueueException e) {
-            finalWorkerTask = workerTask.fail();
-            WorkerTaskResult workerTaskResult = new WorkerTaskResult(finalWorkerTask, dynamicWorkerResults);
-            RunContext runContext = workerTask
-                .getRunContext()
-                .forWorker(this.applicationContext, workerTask);
-
-            runContext.logger().error("Exception while trying to emit the worker task result to the queue", e);
-            this.workerTaskResultQueue.emit(workerTaskResult);
+            // If there is a QueueException it can either be caused by the message limit or another queue issue.
+            // We fail the task and try to resend it.
+            finalWorkerTask  = workerTask.fail();
+            if (e instanceof MessageTooBigException) {
+                // If it's a message too big, we remove the outputs
+                finalWorkerTask = finalWorkerTask.withTaskRun(finalWorkerTask.getTaskRun().withOutputs(Collections.emptyMap()));
+            }
+            WorkerTaskResult workerTaskResult = new WorkerTaskResult(finalWorkerTask);
+            RunContextLogger contextLogger = runContextLoggerFactory.create(workerTask.getTaskRun(), workerTask.getTask());
+            contextLogger.logger().error("Unable to emit the worker task result to the queue: {}", e.getMessage(), e);
+            try {
+                this.workerTaskResultQueue.emit(workerTaskResult);
+            } catch (QueueException ex) {
+                log.error("Unable to emit the worker task result for task {} taskrun {}", workerTask.getTask().getId(), workerTask.getTaskRun().getId(), e);
+            }
             return workerTaskResult;
         } finally {
+            // remove tmp directory
+            if (cleanUp) {
+                workerTask.getRunContext().cleanup();
+            }
+
             this.logTerminated(finalWorkerTask);
         }
     }
@@ -577,25 +678,33 @@ public class Worker implements Service, Runnable, AutoCloseable {
     private void logError(WorkerTrigger workerTrigger, Throwable e) {
         Logger logger = workerTrigger.getConditionContext().getRunContext().logger();
 
-        logService.logTrigger(
-            workerTrigger.getTriggerContext(),
-            logger,
-            Level.WARN,
-            "[date: {}] Worker Evaluate Failed with error '{}'",
-            workerTrigger.getTriggerContext().getDate(),
-            e != null ? e.getMessage() : "null",
-            e
-        );
+        if (e instanceof InterruptedException || (e != null && e.getCause() instanceof InterruptedException)) {
+            logService.logTrigger(
+                workerTrigger.getTriggerContext(),
+                logger,
+                Level.WARN,
+                "[date: {}] Trigger evaluation interrupted in the worker",
+                workerTrigger.getTriggerContext().getDate()
+            );
+        } else {
+            logService.logTrigger(
+                workerTrigger.getTriggerContext(),
+                logger,
+                Level.WARN,
+                "[date: {}] Trigger evaluation failed in the worker with error: {}",
+                workerTrigger.getTriggerContext().getDate(),
+                e != null ? e.getMessage() : "unknown",
+                e
+            );
+        }
 
         if (logger.isTraceEnabled() && e != null) {
             logger.trace(Throwables.getStackTraceAsString(e));
         }
     }
 
-    private WorkerTask runAttempt(WorkerTask workerTask) {
-        RunContext runContext = workerTask
-            .getRunContext()
-            .forWorker(this.applicationContext, workerTask);
+    private WorkerTask runAttempt(WorkerTask workerTask) throws QueueException {
+        DefaultRunContext runContext = runContextInitializer.forWorker((DefaultRunContext) workerTask.getRunContext(), workerTask);;
 
         Logger logger = runContext.logger();
 
@@ -617,7 +726,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
 
         metricRunningCount.incrementAndGet();
 
-        WorkerTaskThread workerThread = new WorkerTaskThread(workerTask, task, runContext, metricRegistry);
+        WorkerTaskCallable workerTaskCallable = new WorkerTaskCallable(workerTask, task, runContext, metricRegistry);
 
         // emit attempts
         this.workerTaskResultQueue.emit(new WorkerTaskResult(workerTask
@@ -628,17 +737,24 @@ public class Worker implements Service, Runnable, AutoCloseable {
         ));
 
         // run it
-        io.kestra.core.models.flows.State.Type state = runThread(workerThread, logger);
+        io.kestra.core.models.flows.State.Type state = callJob(workerTaskCallable);
 
         metricRunningCount.decrementAndGet();
 
         // attempt
         TaskRunAttempt taskRunAttempt = builder
             .build()
-            .withState(state);
+            .withState(state)
+            .withLogFile(runContext.logFileURI());
 
         // metrics
-        runContext.metrics().forEach(metric -> this.metricEntryQueue.emit(MetricEntry.of(workerTask.getTaskRun(), metric)));
+        runContext.metrics().forEach(metric -> {
+            try {
+                this.metricEntryQueue.emit(MetricEntry.of(workerTask.getTaskRun(), metric));
+            } catch (QueueException e) {
+                // fail silently
+            }
+        });
 
         // save outputs
         List<TaskRunAttempt> attempts = this.addAttempt(workerTask, taskRunAttempt);
@@ -647,7 +763,7 @@ public class Worker implements Service, Runnable, AutoCloseable {
             .withAttempts(attempts);
 
         try {
-            taskRun = taskRun.withOutputs(workerThread.getTaskOutput() != null ? workerThread.getTaskOutput().toMap() : ImmutableMap.of());
+            taskRun = taskRun.withOutputs(workerTaskCallable.getTaskOutput() != null ? workerTaskCallable.getTaskOutput().toMap() : ImmutableMap.of());
         } catch (Exception e) {
             logger.warn("Unable to save output on taskRun '{}'", taskRun, e);
         }
@@ -656,30 +772,18 @@ public class Worker implements Service, Runnable, AutoCloseable {
             .withTaskRun(taskRun);
     }
 
-    private io.kestra.core.models.flows.State.Type runThread(AbstractWorkerThread workerThread, Logger logger) {
-        // run it
-        io.kestra.core.models.flows.State.Type state;
-        try {
-            synchronized (this) {
-                workerThreadReferences.add(workerThread);
-            }
-            workerThread.start();
-            workerThread.join();
-            state = workerThread.getTaskState();
-        } catch (InterruptedException e) {
-            logger.error("Failed to join WorkerThread {}", e.getMessage(), e);
-            if (workerThread instanceof WorkerTaskThread workerTaskThread) {
-                state = workerTaskThread.getWorkerTask().getTask().isAllowFailure() ? WARNING : FAILED;
-            } else {
-                state = FAILED;
-            }
-        } finally {
-            synchronized (this) {
-                workerThreadReferences.remove(workerThread);
-            }
+    private io.kestra.core.models.flows.State.Type callJob(AbstractWorkerCallable workerJobCallable) {
+        synchronized (this) {
+            workerCallableReferences.add(workerJobCallable);
         }
 
-        return state;
+        try {
+            return workerJobCallable.call();
+        } finally {
+            synchronized (this) {
+                workerCallableReferences.remove(workerJobCallable);
+            }
+        }
     }
 
     private List<TaskRunAttempt> addAttempt(WorkerTask workerTask, TaskRunAttempt taskRunAttempt) {
@@ -721,13 +825,20 @@ public class Worker implements Service, Runnable, AutoCloseable {
         }
 
         setState(ServiceState.TERMINATING);
-        workerJobQueue.pause();
+
+        try {
+            // close the WorkerJob queue to stop receiving new JobTask execution.
+            workerJobQueue.close();
+        } catch (IOException e) {
+            log.error("Failed to close the WorkerJobQueue");
+        }
 
         final boolean terminatedGracefully;
         if (!skipGracefulTermination.get()) {
             terminatedGracefully = waitForTasksCompletion(timeout);
         } else {
             log.info("Terminating now and skip waiting for tasks completions.");
+            this.receiveCancellations.forEach(Runnable::run);
             this.executorService.shutdownNow();
             closeQueue();
             terminatedGracefully = false;
@@ -742,60 +853,97 @@ public class Worker implements Service, Runnable, AutoCloseable {
     }
 
     private boolean waitForTasksCompletion(final Duration timeout) {
+        final Instant deadline = Instant.now().plus(timeout);
+
+        final List<AbstractWorkerCallable> callables;
+        synchronized (this) {
+            // copy to avoid concurrent modification exception on iteration.
+            callables = new ArrayList<>(this.workerCallableReferences);
+        }
+
+        // signals all worker tasks and triggers of the shutdown.
+        callables.forEach(AbstractWorkerCallable::signalStop);
+
+        AtomicReference<ServiceState> shutdownState = new AtomicReference<>();
         // start shutdown
-        new Thread(
+        Thread.ofVirtual().name("worker-shutdown").start(
             () -> {
                 try {
+                    this.receiveCancellations.forEach(Runnable::run);
                     this.executorService.shutdown();
-                    this.executorService.awaitTermination(timeout.toMillis(), TimeUnit.MILLISECONDS);
+
+                    long remaining = Math.max(0, Instant.now().until(deadline, ChronoUnit.MILLIS));
+
+                    // wait for all realtime triggers to cleanly stop.
+                    awaitForRealtimeTriggers(callables, Duration.ofMillis(remaining));
+
+                    boolean gracefullyShutdown = this.executorService.awaitTermination(remaining, TimeUnit.MILLISECONDS);
+                    if (!gracefullyShutdown) {
+                        log.warn("Worker still has some pending threads after `terminationGracePeriod`. Forcing shutdown now.");
+                        this.executorService.shutdownNow();
+                    }
+
+                    shutdownState.set(gracefullyShutdown ? TERMINATED_GRACEFULLY : TERMINATED_FORCED);
                 } catch (InterruptedException e) {
-                    log.error("Fail to shutdown the worker", e);
+                    log.error("Failed to shutdown the worker. Thread was interrupted");
+                    shutdownState.set(TERMINATED_FORCED);
                 }
-            },
-            "worker-shutdown"
-        ).start();
+            }
+        );
 
-        // interrupt RealtimeThread since never ending
-        this.workerThreadReferences
-            .stream()
-            .filter(t -> t instanceof WorkerTriggerRealtimeThread)
-            .map(t -> (WorkerTriggerRealtimeThread) t)
-            .forEach(t -> {
-                t.interrupt();
-
-                logService.logTrigger(
-                    t.getWorkerTrigger().getTriggerContext(),
-                    t.getWorkerTrigger().getConditionContext().getRunContext().logger(),
-                    Level.INFO,
-                    "Type {} interrupted",
-                    t.getWorkerTrigger().getTrigger().getType()
-                );
-            });
 
         // wait for task completion
-        final AtomicBoolean cleanShutdown = new AtomicBoolean(false);
         Await.until(
             () -> {
-                if (this.executorService.isTerminated() || this.workerThreadReferences.isEmpty()) {
+                ServiceState serviceState = shutdownState.get();
+                if (serviceState == TERMINATED_FORCED || serviceState == TERMINATED_GRACEFULLY) {
                     log.info("All working threads are terminated.");
 
                     // we ensure that last produce message are send
                     closeQueue();
-                    cleanShutdown.set(true);
                     return true;
                 }
 
-                log.warn(
-                    "Waiting for all worker threads to terminate (remaining: {}).",
-                    this.workerThreadReferences.size()
-                );
+                if (this.workerCallableReferences.isEmpty()) {
+                    log.debug("All worker threads is terminated.");
+                } else {
+                    log.warn(
+                        "Waiting for all worker threads to terminate (remaining: {}).",
+                        this.workerCallableReferences.size()
+                    );
+                }
+
                 return false;
             },
             Duration.ofSeconds(1)
         );
 
-        // cleanup
-        return cleanShutdown.get();
+        return shutdownState.get() == TERMINATED_GRACEFULLY;
+    }
+
+    private void awaitForRealtimeTriggers(final List<AbstractWorkerCallable> callables,
+                                          final Duration timeout) {
+        final Instant deadline = Instant.now().plus(timeout);
+        for (AbstractWorkerCallable callable : callables) {
+            if (callable instanceof WorkerTriggerRealtimeCallable t) {
+                long remaining = Math.max(0, Instant.now().until(deadline, ChronoUnit.MILLIS));
+
+                if (!t.awaitStop(Duration.ofMillis(remaining))) {
+                    final String type = t.getWorkerTrigger().getTrigger().getType();
+                    log.debug("Failed to stop trigger '{}' before timeout elapsed.", type);
+                    // As a last resort, we try to stop the trigger via Thread.interrupt.
+                    // If the trigger doesn't respond to interrupts, it may never terminate.
+                    t.interrupt();
+                    logService.logTrigger(
+                        t.getWorkerTrigger().getTriggerContext(),
+                        t.getWorkerTrigger().getConditionContext().getRunContext().logger(),
+                        Level.INFO,
+                        "Type {} interrupted",
+                        type
+                    );
+                }
+            }
+        }
     }
 
     private void closeQueue() {
@@ -809,19 +957,20 @@ public class Worker implements Service, Runnable, AutoCloseable {
 
     @VisibleForTesting
     public void shutdown() {
+        this.receiveCancellations.forEach(Runnable::run);
         this.executorService.shutdownNow();
     }
 
-    public List<WorkerJob> getWorkerThreadTasks() throws Exception {
-        return this.workerThreadReferences
+    public List<WorkerJob> getWorkerThreadTasks() {
+        return this.workerCallableReferences
             .stream()
-            .map(throwFunction(workerThread -> {
-                if (workerThread instanceof WorkerTaskThread workerTaskThread) {
-                    return workerTaskThread.workerTask;
-                } else if (workerThread instanceof AbstractWorkerTriggerThread workerTriggerThread) {
-                    return workerTriggerThread.workerTrigger;
+            .map(throwFunction(workerCallable -> {
+                if (workerCallable instanceof WorkerTaskCallable workerTaskCallable) {
+                    return workerTaskCallable.workerTask;
+                } else if (workerCallable instanceof AbstractWorkerTriggerCallable workerTriggerCallable) {
+                    return workerTriggerCallable.workerTrigger;
                 } else {
-                    throw new Exception("Invalid thread type: '" + workerThread.getClass().getName() + "'");
+                    throw new IllegalArgumentException("Invalid Callable type: '" + workerCallable.getClass().getName() + "'");
                 }
             }))
             .toList();
