@@ -1,11 +1,12 @@
 package io.kestra.core.docs;
 
 import io.kestra.core.Helpers;
+import io.kestra.core.models.property.DynamicPropertyExampleTask;
 import io.kestra.core.models.tasks.runners.TaskRunner;
-import io.kestra.core.models.tasks.runners.types.ProcessTaskRunner;
+import io.kestra.plugin.core.runner.Process;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
-import io.kestra.core.models.triggers.types.Schedule;
+import io.kestra.plugin.core.trigger.Schedule;
 import io.kestra.core.plugins.PluginScanner;
 import io.kestra.core.plugins.RegisteredPlugin;
 import org.junit.jupiter.api.Test;
@@ -34,13 +35,14 @@ class ClassPluginDocumentationTest {
             List<RegisteredPlugin> scan = pluginScanner.scan(plugins);
 
             assertThat(scan.size(), is(1));
-            assertThat(scan.get(0).getTasks().size(), is(1));
+            assertThat(scan.getFirst().getTasks().size(), is(1));
 
-            ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.get(0), scan.get(0).getTasks().get(0), Task.class);
+            ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.getFirst(), scan.getFirst().getTasks().getFirst(), Task.class);
 
             assertThat(doc.getDocExamples().size(), is(2));
             assertThat(doc.getIcon(), is(notNullValue()));
             assertThat(doc.getInputs().size(), is(5));
+            assertThat(doc.getDocLicense(), is("EE"));
 
             // simple
             assertThat(((Map<String, String>) doc.getInputs().get("format")).get("type"), is("string"));
@@ -100,6 +102,7 @@ class ClassPluginDocumentationTest {
             ClassPluginDocumentation<? extends AbstractTrigger> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, Schedule.class, null);
 
             assertThat(doc.getDefs().size(), is(2));
+            assertThat(doc.getDocLicense(), nullValue());
 
             assertThat(((Map<String, Object>) doc.getDefs().get("io.kestra.core.models.tasks.WorkerGroup")).get("type"), is("object"));
             assertThat(((Map<String, Object>) ((Map<String, Object>) doc.getDefs().get("io.kestra.core.models.tasks.WorkerGroup")).get("properties")).size(), is(1));
@@ -114,12 +117,44 @@ class ClassPluginDocumentationTest {
             PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
             RegisteredPlugin scan = pluginScanner.scan();
 
-            ClassPluginDocumentation<? extends TaskRunner> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, ProcessTaskRunner.class, null);
+            ClassPluginDocumentation<? extends TaskRunner> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, Process.class, null);
 
             assertThat((Map<?, ?>) doc.getPropertiesSchema().get("properties"), anEmptyMap());
-            assertThat(doc.getCls(), is("io.kestra.core.models.tasks.runners.types.ProcessTaskRunner"));
+            assertThat(doc.getCls(), is("io.kestra.plugin.core.runner.Process"));
             assertThat(doc.getPropertiesSchema().get("title"), is("Task runner that executes a task as a subprocess on the Kestra host."));
             assertThat(doc.getDefs(), anEmptyMap());
+        }));
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void dynamicProperty() throws URISyntaxException {
+        Helpers.runApplicationContext(throwConsumer((applicationContext) -> {
+            JsonSchemaGenerator jsonSchemaGenerator = applicationContext.getBean(JsonSchemaGenerator.class);
+
+            PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
+            RegisteredPlugin scan = pluginScanner.scan();
+
+            ClassPluginDocumentation<? extends DynamicPropertyExampleTask> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, DynamicPropertyExampleTask.class, null);
+
+            assertThat(doc.getCls(), is("io.kestra.core.models.property.DynamicPropertyExampleTask"));
+            assertThat(doc.getDefs(), aMapWithSize(6));
+            Map<String, Object> properties = (Map<String, Object>) doc.getPropertiesSchema().get("properties");
+            assertThat(properties, aMapWithSize(17));
+
+            Map<String, Object> number = (Map<String, Object>) properties.get("number");
+            assertThat(number.get("oneOf"), notNullValue());
+            List<Map<String, Object>> oneOf = (List<Map<String, Object>>) number.get("oneOf");
+            assertThat(oneOf, hasSize(2));
+            assertThat(oneOf.getFirst().get("type"), is("integer"));
+            assertThat(oneOf.getFirst().get("$dynamic"), is(true));
+            assertThat(oneOf.get(1).get("type"), is("string"));
+            assertThat(oneOf.get(1).get("format"), is(".*{{.*}}.*"));
+
+            Map<String, Object> withDefault = (Map<String, Object>) properties.get("withDefault");
+            assertThat(withDefault.get("type"), is("string"));
+            assertThat(withDefault.get("default"), is("Default Value"));
+            assertThat(withDefault.get("$dynamic"), is(true));
         }));
     }
 }
