@@ -1,16 +1,16 @@
 package io.kestra.core.docs;
 
 import io.kestra.core.models.tasks.runners.TaskRunner;
-import io.kestra.core.models.tasks.runners.types.ProcessTaskRunner;
+import io.kestra.plugin.core.runner.Process;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.plugins.PluginScanner;
 import io.kestra.core.plugins.RegisteredPlugin;
-import io.kestra.core.tasks.debugs.Echo;
-import io.kestra.core.tasks.debugs.Return;
-import io.kestra.core.tasks.flows.Dag;
-import io.kestra.core.tasks.flows.Subflow;
-import io.kestra.core.tasks.states.Set;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import io.kestra.plugin.core.debug.Echo;
+import io.kestra.plugin.core.debug.Return;
+import io.kestra.plugin.core.flow.Dag;
+import io.kestra.plugin.core.flow.Subflow;
+import io.kestra.plugin.core.state.Set;
+import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
@@ -25,7 +25,7 @@ import java.util.Objects;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 
-@MicronautTest
+@KestraTest
 class DocumentationGeneratorTest {
     @Inject
     JsonSchemaGenerator jsonSchemaGenerator;
@@ -41,7 +41,7 @@ class DocumentationGeneratorTest {
         List<RegisteredPlugin> scan = pluginScanner.scan(plugins);
 
         assertThat(scan.size(), is(1));
-        ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.get(0), scan.get(0).getTasks().get(0), Task.class);
+        ClassPluginDocumentation<? extends Task> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan.getFirst(), scan.getFirst().getTasks().getFirst(), Task.class);
 
         String render = DocumentationGenerator.render(doc);
 
@@ -49,6 +49,7 @@ class DocumentationGeneratorTest {
         assertThat(render, containsString("description: \"Short description for this task\""));
         assertThat(render, containsString("`VALUE_1`"));
         assertThat(render, containsString("`VALUE_2`"));
+        assertThat(render, containsString("This plugin is exclusively available on the Cloud and Enterprise editions of Kestra."));
     }
 
     @SuppressWarnings({"rawtypes", "unchecked"})
@@ -64,8 +65,8 @@ class DocumentationGeneratorTest {
 
         assertThat(render, containsString("Dag"));
         assertThat(render, containsString("**Required:** ✔️"));
-
         assertThat(render, containsString("`concurrent`"));
+        assertThat(render, not(containsString("requires an Enterprise Edition")));
 
         int propertiesIndex = render.indexOf("Properties");
         int definitionsIndex = render.indexOf("Definitions");
@@ -131,9 +132,10 @@ class DocumentationGeneratorTest {
         String render = DocumentationGenerator.render(doc);
 
         assertThat(render, containsString("Echo"));
-        assertThat(render, containsString("Deprecated"));
+        assertThat(render, containsString("This feature is deprecated and will be removed in the future"));
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void state() throws IOException {
         PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
@@ -154,23 +156,35 @@ class DocumentationGeneratorTest {
         RegisteredPlugin core = pluginScanner.scan();
 
         List<Document> docs = documentationGenerator.generate(core);
-        Document doc = docs.get(0);
+        Document doc = docs.getFirst();
         assertThat(doc.getIcon(), is(notNullValue()));
         assertThat(doc.getBody(), containsString("## <img width=\"25\" src=\"data:image/svg+xml;base64,"));
     }
 
     @Test
+    void pluginEeDoc() throws Exception {
+        Path plugins = Paths.get(Objects.requireNonNull(ClassPluginDocumentationTest.class.getClassLoader().getResource("plugins")).toURI());
+
+        PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
+        List<RegisteredPlugin> list = pluginScanner.scan(plugins);
+
+        List<Document> docs = documentationGenerator.generate(list.stream().filter(r -> r.license() != null).findFirst().orElseThrow());
+        Document doc = docs.getFirst();
+        assertThat(doc.getBody(), containsString("This plugin is exclusively available on the Cloud and Enterprise editions of Kestra."));
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
     void taskRunner() throws IOException {
         PluginScanner pluginScanner = new PluginScanner(ClassPluginDocumentationTest.class.getClassLoader());
         RegisteredPlugin scan = pluginScanner.scan();
-        Class<ProcessTaskRunner> processTaskRunner = scan.findClass(ProcessTaskRunner.class.getName()).orElseThrow();
+        Class<Process> processTaskRunner = scan.findClass(Process.class.getName()).orElseThrow();
 
         ClassPluginDocumentation<? extends TaskRunner> doc = ClassPluginDocumentation.of(jsonSchemaGenerator, scan, processTaskRunner, TaskRunner.class);
 
         String render = DocumentationGenerator.render(doc);
 
-        assertThat(render, containsString("title: ProcessTaskRunner"));
+        assertThat(render, containsString("title: Process"));
         assertThat(render, containsString("Task runner that executes a task as a subprocess on the Kestra host."));
-        assertThat(render, containsString("This plugin is currently in beta"));
     }
 }
