@@ -4,7 +4,7 @@ import io.kestra.core.models.triggers.Trigger;
 import io.kestra.core.utils.IdUtils;
 import io.micronaut.data.model.Pageable;
 import io.micronaut.data.model.Sort;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
@@ -15,7 +15,7 @@ import java.util.Optional;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
-@MicronautTest(transactional = false)
+@KestraTest
 public abstract class AbstractTriggerRepositoryTest {
     private static final String TEST_NAMESPACE = "io.kestra.unittest";
 
@@ -26,7 +26,6 @@ public abstract class AbstractTriggerRepositoryTest {
         return Trigger.builder()
             .flowId(IdUtils.create())
             .namespace(TEST_NAMESPACE)
-            .flowRevision(1)
             .triggerId(IdUtils.create())
             .executionId(IdUtils.create())
             .date(ZonedDateTime.now());
@@ -63,35 +62,39 @@ public abstract class AbstractTriggerRepositoryTest {
 
         assertThat(all.size(), is(4));
 
+        all = triggerRepository.findAll(null);
+
+        assertThat(all.size(), is(4));
+
         String namespacePrefix = "io.kestra.another";
         String namespace = namespacePrefix + ".ns";
         Trigger trigger = trigger().namespace(namespace).build();
         triggerRepository.save(trigger);
 
-        List<Trigger> find = triggerRepository.find(Pageable.from(1, 4, Sort.of(Sort.Order.asc("namespace"))), null, null, null);
+        List<Trigger> find = triggerRepository.find(Pageable.from(1, 4, Sort.of(Sort.Order.asc("namespace"))), null, null, null, null, null);
         assertThat(find.size(), is(4));
-        assertThat(find.get(0).getNamespace(), is(namespace));
+        assertThat(find.getFirst().getNamespace(), is(namespace));
 
-        find = triggerRepository.find(Pageable.from(1, 4, Sort.of(Sort.Order.asc("namespace"))), null, null, null, searchedTrigger.getFlowId());
+        find = triggerRepository.find(Pageable.from(1, 4, Sort.of(Sort.Order.asc("namespace"))), null, null, null, searchedTrigger.getFlowId(), null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getFlowId(), is(searchedTrigger.getFlowId()));
+        assertThat(find.getFirst().getFlowId(), is(searchedTrigger.getFlowId()));
 
-        find = triggerRepository.find(Pageable.from(1, 100, Sort.of(Sort.Order.asc(triggerRepository.sortMapping().apply("triggerId")))), null, null, namespacePrefix);
+        find = triggerRepository.find(Pageable.from(1, 100, Sort.of(Sort.Order.asc(triggerRepository.sortMapping().apply("triggerId")))), null, null, namespacePrefix, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getTriggerId(), is(trigger.getTriggerId()));
+        assertThat(find.getFirst().getTriggerId(), is(trigger.getTriggerId()));
 
         // Full text search is on namespace, flowId, triggerId, executionId
-        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), trigger.getNamespace(), null, null);
+        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), trigger.getNamespace(), null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getTriggerId(), is(trigger.getTriggerId()));
-        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), searchedTrigger.getFlowId(), null, null);
+        assertThat(find.getFirst().getTriggerId(), is(trigger.getTriggerId()));
+        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), searchedTrigger.getFlowId(), null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getTriggerId(), is(searchedTrigger.getTriggerId()));
-        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), searchedTrigger.getTriggerId(), null, null);
+        assertThat(find.getFirst().getTriggerId(), is(searchedTrigger.getTriggerId()));
+        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), searchedTrigger.getTriggerId(), null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getTriggerId(), is(searchedTrigger.getTriggerId()));
-        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), searchedTrigger.getExecutionId(), null, null);
+        assertThat(find.getFirst().getTriggerId(), is(searchedTrigger.getTriggerId()));
+        find = triggerRepository.find(Pageable.from(1, 100, Sort.UNSORTED), searchedTrigger.getExecutionId(), null, null, null, null);
         assertThat(find.size(), is(1));
-        assertThat(find.get(0).getTriggerId(), is(searchedTrigger.getTriggerId()));
+        assertThat(find.getFirst().getTriggerId(), is(searchedTrigger.getTriggerId()));
     }
 }
