@@ -3,12 +3,15 @@ package io.kestra.core.runners;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.State;
+import io.kestra.core.queues.QueueException;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.FlowRepositoryInterface;
+import io.kestra.core.utils.TestsUtils;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
+import reactor.core.publisher.Flux;
 
 import java.time.Duration;
 import java.util.Optional;
@@ -32,20 +35,17 @@ public class FlowConcurrencyCaseTest {
     @Named(QueueFactoryInterface.EXECUTION_NAMED)
     protected QueueInterface<Execution> executionQueue;
 
-    public void flowConcurrencyCancel() throws TimeoutException, InterruptedException {
+    public void flowConcurrencyCancel() throws TimeoutException, QueueException, InterruptedException {
         Execution execution1 = runnerUtils.runOneUntilRunning(null, "io.kestra.tests", "flow-concurrency-cancel", null, null, Duration.ofSeconds(30));
         Execution execution2 = runnerUtils.runOne(null, "io.kestra.tests", "flow-concurrency-cancel");
 
         assertThat(execution1.getState().isRunning(), is(true));
         assertThat(execution2.getState().getCurrent(), is(State.Type.CANCELLED));
 
-        var executionResult1  = new AtomicReference<Execution>();
-
         CountDownLatch latch1 = new CountDownLatch(1);
 
-        executionQueue.receive(e -> {
+        Flux<Execution> receive = TestsUtils.receive(executionQueue, e -> {
             if (e.getLeft().getId().equals(execution1.getId())) {
-                executionResult1.set(e.getLeft());
                 if (e.getLeft().getState().getCurrent() == State.Type.SUCCESS) {
                     latch1.countDown();
                 }
@@ -56,23 +56,20 @@ public class FlowConcurrencyCaseTest {
 
         latch1.await(1, TimeUnit.MINUTES);
 
-        assertThat(executionResult1.get().getState().getCurrent(), is(State.Type.SUCCESS));
+        assertThat(receive.blockLast().getState().getCurrent(), is(State.Type.SUCCESS));
     }
 
-    public void flowConcurrencyFail() throws TimeoutException, InterruptedException {
+    public void flowConcurrencyFail() throws TimeoutException, QueueException, InterruptedException {
         Execution execution1 = runnerUtils.runOneUntilRunning(null, "io.kestra.tests", "flow-concurrency-fail", null, null, Duration.ofSeconds(30));
         Execution execution2 = runnerUtils.runOne(null, "io.kestra.tests", "flow-concurrency-fail");
 
         assertThat(execution1.getState().isRunning(), is(true));
         assertThat(execution2.getState().getCurrent(), is(State.Type.FAILED));
 
-        var executionResult1  = new AtomicReference<Execution>();
-
         CountDownLatch latch1 = new CountDownLatch(1);
 
-        executionQueue.receive(e -> {
+        Flux<Execution> receive = TestsUtils.receive(executionQueue, e -> {
             if (e.getLeft().getId().equals(execution1.getId())) {
-                executionResult1.set(e.getLeft());
                 if (e.getLeft().getState().getCurrent() == State.Type.SUCCESS) {
                     latch1.countDown();
                 }
@@ -83,15 +80,15 @@ public class FlowConcurrencyCaseTest {
 
         latch1.await(1, TimeUnit.MINUTES);
 
-        assertThat(executionResult1.get().getState().getCurrent(), is(State.Type.SUCCESS));
+        assertThat(receive.blockLast().getState().getCurrent(), is(State.Type.SUCCESS));
     }
 
-    public void flowConcurrencyQueue() throws TimeoutException, InterruptedException {
+    public void flowConcurrencyQueue() throws TimeoutException, QueueException, InterruptedException {
         Execution execution1 = runnerUtils.runOneUntilRunning(null, "io.kestra.tests", "flow-concurrency-queue", null, null, Duration.ofSeconds(30));
         Flow flow = flowRepository
             .findById(null, "io.kestra.tests", "flow-concurrency-queue", Optional.empty())
             .orElseThrow();
-        Execution execution2 = Execution.newExecution(flow, null, null);
+        Execution execution2 = Execution.newExecution(flow, null, null, Optional.empty());
         executionQueue.emit(execution2);
 
         assertThat(execution1.getState().isRunning(), is(true));
@@ -104,7 +101,7 @@ public class FlowConcurrencyCaseTest {
         CountDownLatch latch2 = new CountDownLatch(1);
         CountDownLatch latch3 = new CountDownLatch(1);
 
-        executionQueue.receive(e -> {
+        Flux<Execution> receive = TestsUtils.receive(executionQueue, e -> {
             if (e.getLeft().getId().equals(execution1.getId())) {
                 executionResult1.set(e.getLeft());
                 if (e.getLeft().getState().getCurrent() == State.Type.SUCCESS) {
@@ -126,20 +123,21 @@ public class FlowConcurrencyCaseTest {
         latch1.await(1, TimeUnit.MINUTES);
         latch2.await(1, TimeUnit.MINUTES);
         latch3.await(1, TimeUnit.MINUTES);
+        receive.blockLast();
 
         assertThat(executionResult1.get().getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(executionResult2.get().getState().getCurrent(), is(State.Type.SUCCESS));
-        assertThat(executionResult2.get().getState().getHistories().get(0).getState(), is(State.Type.CREATED));
+        assertThat(executionResult2.get().getState().getHistories().getFirst().getState(), is(State.Type.CREATED));
         assertThat(executionResult2.get().getState().getHistories().get(1).getState(), is(State.Type.QUEUED));
         assertThat(executionResult2.get().getState().getHistories().get(2).getState(), is(State.Type.RUNNING));
     }
 
-    public void flowConcurrencyQueuePause() throws TimeoutException, InterruptedException {
+    public void flowConcurrencyQueuePause() throws TimeoutException, QueueException, InterruptedException {
         Execution execution1 = runnerUtils.runOneUntilRunning(null, "io.kestra.tests", "flow-concurrency-queue-pause", null, null, Duration.ofSeconds(30));
         Flow flow = flowRepository
             .findById(null, "io.kestra.tests", "flow-concurrency-queue-pause", Optional.empty())
             .orElseThrow();
-        Execution execution2 = Execution.newExecution(flow, null, null);
+        Execution execution2 = Execution.newExecution(flow, null, null, Optional.empty());
         executionQueue.emit(execution2);
 
         assertThat(execution1.getState().isRunning(), is(true));
@@ -152,7 +150,7 @@ public class FlowConcurrencyCaseTest {
         CountDownLatch latch2 = new CountDownLatch(1);
         CountDownLatch latch3 = new CountDownLatch(1);
 
-        executionQueue.receive(e -> {
+        Flux<Execution> receive = TestsUtils.receive(executionQueue, e -> {
             if (e.getLeft().getId().equals(execution1.getId())) {
                 executionResult1.set(e.getLeft());
                 if (e.getLeft().getState().getCurrent() == State.Type.SUCCESS) {
@@ -174,20 +172,21 @@ public class FlowConcurrencyCaseTest {
         latch1.await(1, TimeUnit.MINUTES);
         latch2.await(1, TimeUnit.MINUTES);
         latch3.await(1, TimeUnit.MINUTES);
+        receive.blockLast();
 
         assertThat(executionResult1.get().getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(executionResult2.get().getState().getCurrent(), is(State.Type.SUCCESS));
-        assertThat(executionResult2.get().getState().getHistories().get(0).getState(), is(State.Type.CREATED));
+        assertThat(executionResult2.get().getState().getHistories().getFirst().getState(), is(State.Type.CREATED));
         assertThat(executionResult2.get().getState().getHistories().get(1).getState(), is(State.Type.QUEUED));
         assertThat(executionResult2.get().getState().getHistories().get(2).getState(), is(State.Type.RUNNING));
     }
 
-    public void flowConcurrencyCancelPause() throws TimeoutException, InterruptedException {
+    public void flowConcurrencyCancelPause() throws TimeoutException, QueueException, InterruptedException {
         Execution execution1 = runnerUtils.runOneUntilRunning(null, "io.kestra.tests", "flow-concurrency-cancel-pause", null, null, Duration.ofSeconds(30));
         Flow flow = flowRepository
             .findById(null, "io.kestra.tests", "flow-concurrency-cancel-pause", Optional.empty())
             .orElseThrow();
-        Execution execution2 = Execution.newExecution(flow, null, null);
+        Execution execution2 = Execution.newExecution(flow, null, null, Optional.empty());
         executionQueue.emit(execution2);
 
         assertThat(execution1.getState().isRunning(), is(true));
@@ -199,7 +198,7 @@ public class FlowConcurrencyCaseTest {
         CountDownLatch latch1 = new CountDownLatch(1);
         CountDownLatch latch2 = new CountDownLatch(1);
 
-        executionQueue.receive(e -> {
+        Flux<Execution> receive = TestsUtils.receive(executionQueue, e -> {
             if (e.getLeft().getId().equals(execution1.getId())) {
                 executionResult1.set(e.getLeft());
                 if (e.getLeft().getState().getCurrent() == State.Type.SUCCESS) {
@@ -217,10 +216,11 @@ public class FlowConcurrencyCaseTest {
 
         latch1.await(1, TimeUnit.MINUTES);
         latch2.await(1, TimeUnit.MINUTES);
+        receive.blockLast();
 
         assertThat(executionResult1.get().getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(executionResult2.get().getState().getCurrent(), is(State.Type.CANCELLED));
-        assertThat(executionResult2.get().getState().getHistories().get(0).getState(), is(State.Type.CREATED));
+        assertThat(executionResult2.get().getState().getHistories().getFirst().getState(), is(State.Type.CREATED));
         assertThat(executionResult2.get().getState().getHistories().get(1).getState(), is(State.Type.CANCELLED));
     }
 }
