@@ -2,16 +2,24 @@ package io.kestra.core.runners;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.io.CharStreams;
-import io.kestra.core.exceptions.MissingRequiredArgument;
 import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.executions.LogEntry;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.State;
+import io.kestra.core.queues.QueueException;
+import io.kestra.core.queues.QueueFactoryInterface;
+import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.FlowRepositoryInterface;
 import io.kestra.core.storages.StorageInterface;
+import io.kestra.core.utils.TestsUtils;
 import jakarta.inject.Inject;
+import jakarta.inject.Named;
+import org.jcodings.util.Hash;
 import org.junit.jupiter.api.Test;
 
 import jakarta.validation.ConstraintViolationException;
+import reactor.core.publisher.Flux;
+
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -21,17 +29,19 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.concurrent.TimeoutException;
+import java.util.function.Consumer;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class InputsTest extends AbstractMemoryRunnerTest {
+    @Inject
+    @Named(QueueFactoryInterface.WORKERTASKLOG_NAMED)
+    private QueueInterface<LogEntry> logQueue;
+
     public static Map<String, Object> inputs = ImmutableMap.<String, Object>builder()
         .put("string", "myString")
         .put("enum", "ENUM_VALUE")
@@ -56,8 +66,12 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         .put("validatedFloat", "0.42")
         .put("validatedTime", "11:27:49")
         .put("secret", "secret")
-        .put("array", """
-            ["s1", "s2", "s3"]""")
+        .put("array", "[1, 2, 3]")
+        .put("yaml", """
+            some: property
+            alist:
+            - of
+            - values""")
         .build();
 
     @Inject
@@ -66,12 +80,15 @@ public class InputsTest extends AbstractMemoryRunnerTest {
     @Inject
     private StorageInterface storageInterface;
 
+    @Inject
+    private FlowInputOutput flowIO;
+
     private Map<String, Object> typedInputs(Map<String, Object> map) {
         return typedInputs(map, flowRepository.findById(null, "io.kestra.tests", "inputs").get());
     }
 
     private Map<String, Object> typedInputs(Map<String, Object> map, Flow flow) {
-        return runnerUtils.typedInputs(
+        return flowIO.readExecutionInputs(
             flow,
             Execution.builder()
                 .id("test")
@@ -85,9 +102,10 @@ public class InputsTest extends AbstractMemoryRunnerTest {
 
     @Test
     void missingRequired() {
-        assertThrows(IllegalArgumentException.class, () -> {
-            typedInputs(new HashMap<>());
-        });
+        HashMap<String, Object> inputs = new HashMap<>(InputsTest.inputs);
+        inputs.put("string", null);
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(inputs));
+        assertThat(e.getMessage(), containsString("Invalid input for `string`, missing required input, but received `null`"));
     }
 
     @Test
@@ -133,7 +151,10 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         assertThat(typeds.get("secret"), not("secret")); // secret inputs are encrypted
         assertThat(typeds.get("array"), instanceOf(List.class));
         assertThat((List<String>)typeds.get("array"), hasSize(3));
-        assertThat((List<String>)typeds.get("array"), contains("s1", "s2", "s3"));
+        assertThat((List<String>)typeds.get("array"), contains(1, 2, 3));
+        assertThat(typeds.get("yaml"), is(Map.of(
+            "some", "property",
+            "alist", List.of("of", "values"))));
     }
 
     @Test
@@ -151,25 +172,30 @@ public class InputsTest extends AbstractMemoryRunnerTest {
     }
 
     @Test
-    void inputFlow() throws TimeoutException {
+    void inputFlow() throws TimeoutException, QueueException {
         Execution execution = runnerUtils.runOne(
             null,
             "io.kestra.tests",
             "inputs",
             null,
-            (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs)
+            (flow, execution1) -> flowIO.readExecutionInputs(flow, execution1, inputs)
         );
 
-        assertThat(execution.getTaskRunList(), hasSize(10));
+        assertThat(execution.getTaskRunList(), hasSize(14));
         assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(
-            (String) execution.findTaskRunsByTaskId("file").get(0).getOutputs().get("value"),
+            (String) execution.findTaskRunsByTaskId("file").getFirst().getOutputs().get("value"),
             matchesRegex("kestra:///io/kestra/tests/inputs/executions/.*/inputs/file/application-test.yml")
         );
         // secret inputs are decrypted to be used as task properties
         assertThat(
-            (String) execution.findTaskRunsByTaskId("secret").get(0).getOutputs().get("value"),
+            (String) execution.findTaskRunsByTaskId("secret").getFirst().getOutputs().get("value"),
             is("secret")
+        );
+        // null inputs are serialized
+        assertThat(
+            (String) execution.findTaskRunsByTaskId("optional").getFirst().getOutputs().get("value"),
+            emptyString()
         );
     }
 
@@ -178,125 +204,99 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         HashMap<String, Object> map = new HashMap<>(inputs);
         map.put("validatedString", "foo");
 
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(map);
-        });
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
 
-        assertThat(e.getMessage(), is("Invalid input 'foo', it must match the pattern 'A\\d+'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedString`, it must match the pattern"));
     }
 
     @Test
     void inputValidatedIntegerBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedInt", "9");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '9', it must be more than '10'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedInt`, it must be more than `10`, but received `9`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedInt", "21");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '21', it must be less than '20'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedInt`, it must be less than `20`, but received `21`"));
     }
 
     @Test
     void inputValidatedDateBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedDate", "2022-01-01");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '2022-01-01', it must be after '2023-01-01'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDate`, it must be after `2023-01-01`, but received `2022-01-01`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedDate", "2024-01-01");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '2024-01-01', it must be before '2023-12-31'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDate`, it must be before `2023-12-31`, but received `2024-01-01`"));
     }
 
     @Test
     void inputValidatedDateTimeBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedDateTime", "2022-01-01T00:00:00Z");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '2022-01-01T00:00:00Z', it must be after '2023-01-01T00:00:00Z'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDateTime`, it must be after `2023-01-01T00:00:00Z`, but received `2022-01-01T00:00:00Z`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedDateTime", "2024-01-01T00:00:00Z");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '2024-01-01T00:00:00Z', it must be before '2023-12-31T23:59:59Z'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDateTime`, it must be before `2023-12-31T23:59:59Z`"));
     }
 
     @Test
     void inputValidatedDurationBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedDuration", "PT1S");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input 'PT1S', it must be more than 'PT10S'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDuration`, It must be more than `PT10S`, but received `PT1S`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedDuration", "PT30S");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input 'PT30S', it must be less than 'PT20S'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedDuration`, It must be less than `PT20S`, but received `PT30S`"));
     }
 
     @Test
     void inputValidatedFloatBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedFloat", "0.01");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '0.01', it must be more than '0.1'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedFloat`, it must be more than `0.1`, but received `0.01`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedFloat", "1.01");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '1.01', it must be less than '0.5'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedFloat`, it must be less than `0.5`, but received `1.01`"));
     }
 
     @Test
     void inputValidatedTimeBadValue() {
         HashMap<String, Object> mapMin = new HashMap<>(inputs);
         mapMin.put("validatedTime", "00:00:01");
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMin);
-        });
-        assertThat(e.getMessage(), is("Invalid input '00:00:01', it must be after '01:00'"));
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMin));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedTime`, it must be after `01:00`, but received `00:00:01`"));
 
         HashMap<String, Object> mapMax = new HashMap<>(inputs);
         mapMax.put("validatedTime", "14:00:00");
 
-        e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(mapMax);
-        });
+        e = assertThrows(ConstraintViolationException.class, () -> typedInputs(mapMax));
 
-        assertThat(e.getMessage(), is("Invalid input '14:00', it must be before '11:59:59'"));
+        assertThat(e.getMessage(), containsString("Invalid input for `validatedTime`, it must be before `11:59:59`, but received `14:00:00`"));
     }
 
     @Test
@@ -304,11 +304,9 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         HashMap<String, Object> map = new HashMap<>(inputs);
         map.put("uri", "http:/bla");
 
-        MissingRequiredArgument e = assertThrows(MissingRequiredArgument.class, () -> {
-            Map<String, Object> typeds = typedInputs(map);
-        });
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
 
-        assertThat(e.getMessage(), containsString("Invalid URI format"));
+        assertThat(e.getMessage(), containsString("Invalid input for `uri`, Expected `URI` but received `http:/bla`, but received `http:/bla`"));
     }
 
     @Test
@@ -316,10 +314,68 @@ public class InputsTest extends AbstractMemoryRunnerTest {
         HashMap<String, Object> map = new HashMap<>(inputs);
         map.put("enum", "INVALID");
 
-        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> {
-            Map<String, Object> typeds = typedInputs(map);
-        });
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
 
-        assertThat(e.getMessage(), is("Invalid input 'INVALID', it must match the values '[ENUM_VALUE, OTHER_ONE]'"));
+        assertThat(e.getMessage(), is("enum: Invalid input for `enum`, it must match the values `[ENUM_VALUE, OTHER_ONE]`, but received `INVALID`"));
+    }
+
+    @Test
+    void inputArrayFailed() {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("array", "[\"s1\", \"s2\"]");
+
+        ConstraintViolationException e = assertThrows(ConstraintViolationException.class, () -> typedInputs(map));
+
+        assertThat(e.getMessage(), containsString("Invalid input for `array`, Unable to parse array element as `INT` on `s1`, but received `[\"s1\", \"s2\"]`"));
+    }
+
+    @Test
+    void inputEmptyJson() {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("json", "{}");
+
+        Map<String, Object> typeds = typedInputs(map);
+
+        assertThat(typeds.get("json"), instanceOf(Map.class));
+        assertThat(((Map<?, ?>) typeds.get("json")).size(), is(0));
+    }
+
+    @Test
+    void inputEmptyJsonFlow() throws TimeoutException, QueueException {
+        HashMap<String, Object> map = new HashMap<>(inputs);
+        map.put("json", "{}");
+
+        Execution execution = runnerUtils.runOne(
+            null,
+            "io.kestra.tests",
+            "inputs",
+            null,
+            (flow, execution1) -> flowIO.readExecutionInputs(flow, execution1, map)
+        );
+
+        assertThat(execution.getTaskRunList(), hasSize(14));
+        assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
+
+        assertThat(execution.getInputs().get("json"), instanceOf(Map.class));
+        assertThat(((Map<?, ?>) execution.getInputs().get("json")).size(), is(0));
+        assertThat((String) execution.findTaskRunsByTaskId("jsonOutput").getFirst().getOutputs().get("value"), is("{}"));
+    }
+
+    @Test
+    void shouldNotLogSecretInput() throws TimeoutException, QueueException {
+        Flux<LogEntry> receive = TestsUtils.receive(logQueue, l -> {});
+
+        Execution execution = runnerUtils.runOne(
+            null,
+            "io.kestra.tests",
+            "input-log-secret"
+        );
+
+        assertThat(execution.getTaskRunList(), hasSize(1));
+        assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
+
+        var logEntry = receive.blockLast();
+        assertThat(logEntry, notNullValue());
+        assertThat(logEntry.getMessage(), is("This is my secret: ********"));
     }
 }
