@@ -2,6 +2,7 @@ package io.kestra.core.runners;
 
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.State;
+import io.kestra.core.queues.QueueException;
 import io.kestra.core.storages.StorageInterface;
 import jakarta.inject.Inject;
 import org.apache.commons.lang3.StringUtils;
@@ -16,7 +17,6 @@ import java.nio.file.Files;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -27,17 +27,20 @@ public class TaskWithAllowFailureTest extends AbstractMemoryRunnerTest {
     @Inject
     private StorageInterface storageInterface;
 
+    @Inject
+    private FlowInputOutput flowIO;
+
     @Test
-    void runnableTask() throws TimeoutException {
+    void runnableTask() throws TimeoutException, QueueException {
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "task-allow-failure-runnable");
 
         assertThat(execution.getState().getCurrent(), is(State.Type.WARNING));
         assertThat(execution.getTaskRunList(), hasSize(2));
-        assertThat(execution.findTaskRunsByTaskId("fail").get(0).getAttempts().size(), is(3));
+        assertThat(execution.findTaskRunsByTaskId("fail").getFirst().getAttempts().size(), is(3));
     }
 
     @Test
-    void executableTask_Flow() throws TimeoutException {
+    void executableTask_Flow() throws TimeoutException, QueueException {
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "task-allow-failure-executable-flow");
 
         assertThat(execution.getState().getCurrent(), is(State.Type.WARNING));
@@ -45,27 +48,27 @@ public class TaskWithAllowFailureTest extends AbstractMemoryRunnerTest {
     }
 
     @Test
-    void executableTask_ForEachItem() throws TimeoutException, URISyntaxException, IOException {
-        URI file = storageUpload(10);
+    void executableTask_ForEachItem() throws TimeoutException, QueueException, URISyntaxException, IOException {
+        URI file = storageUpload();
         Map<String, Object> inputs = Map.of("file", file.toString());
-        Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "task-allow-failure-executable-foreachitem", null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
+        Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "task-allow-failure-executable-foreachitem", null, (flow, execution1) -> flowIO.readExecutionInputs(flow, execution1, inputs));
 
         assertThat(execution.getState().getCurrent(), is(State.Type.WARNING));
         assertThat(execution.getTaskRunList(), hasSize(4));
     }
 
     @Test
-    void flowableTask() throws TimeoutException {
+    void flowableTask() throws TimeoutException, QueueException {
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "task-allow-failure-flowable");
 
         assertThat(execution.getState().getCurrent(), is(State.Type.WARNING));
         assertThat(execution.getTaskRunList(), hasSize(3));
     }
 
-    private URI storageUpload(int count) throws URISyntaxException, IOException {
+    private URI storageUpload() throws URISyntaxException, IOException {
         File tempFile = File.createTempFile("file", ".txt");
 
-        Files.write(tempFile.toPath(), content(count));
+        Files.write(tempFile.toPath(), content());
 
         return storageInterface.put(
             null,
@@ -74,10 +77,10 @@ public class TaskWithAllowFailureTest extends AbstractMemoryRunnerTest {
         );
     }
 
-    private List<String> content(int count) {
+    private List<String> content() {
         return IntStream
-            .range(0, count)
+            .range(0, 10)
             .mapToObj(value -> StringUtils.leftPad(value + "", 20))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
