@@ -7,15 +7,23 @@ import org.jooq.*;
 import org.jooq.Record;
 import org.jooq.impl.DSL;
 
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public class MysqlQueue<T> extends JdbcQueue<T> {
+
+    // TODO - remove once 'queue' table is re-designed
+    private static final MysqlQueueConsumers QUEUE_CONSUMERS = new MysqlQueueConsumers();
+
     public MysqlQueue(Class<T> cls, ApplicationContext applicationContext) {
         super(cls, applicationContext);
     }
 
     @Override
-    protected Result<Record> receiveFetch(DSLContext ctx, String consumerGroup, Integer offset) {
+    protected Result<Record> receiveFetch(DSLContext ctx, String consumerGroup, Integer offset, boolean forUpdate) {
         var select = ctx.select(
                 AbstractJdbcRepository.field("value"),
                 AbstractJdbcRepository.field("offset")
@@ -33,17 +41,22 @@ public class MysqlQueue<T> extends JdbcQueue<T> {
             select = select.and(AbstractJdbcRepository.field("consumer_group").isNull());
         }
 
-        return select
+        var limitSelect = select
             .orderBy(AbstractJdbcRepository.field("offset").asc())
-            .limit(configuration.getPollSize())
-            .forUpdate()
-            .skipLocked()
+            .limit(configuration.getPollSize());
+        ResultQuery<Record2<Object, Object>> configuredSelect = limitSelect;
+
+        if (forUpdate) {
+            configuredSelect = limitSelect.forUpdate().skipLocked();
+        }
+
+        return configuredSelect
             .fetchMany()
-            .get(0);
+            .getFirst();
     }
 
     @Override
-    protected Result<Record> receiveFetch(DSLContext ctx, String consumerGroup, String queueType) {
+    protected Result<Record> receiveFetch(DSLContext ctx, String consumerGroup, String queueType, boolean forUpdate) {
         var select = ctx
             .select(
                 AbstractJdbcRepository.field("value"),
@@ -54,7 +67,7 @@ public class MysqlQueue<T> extends JdbcQueue<T> {
             .where(AbstractJdbcRepository.field("type").eq(this.cls.getName()))
             .and(DSL.or(List.of(
                 AbstractJdbcRepository.field("consumers").isNull(),
-                DSL.condition("NOT(FIND_IN_SET(?, consumers) > 0)", queueType)
+                AbstractJdbcRepository.field("consumers").in(QUEUE_CONSUMERS.allForConsumerNotIn(queueType))
             )));
 
         if (consumerGroup != null) {
@@ -63,12 +76,18 @@ public class MysqlQueue<T> extends JdbcQueue<T> {
             select = select.and(AbstractJdbcRepository.field("consumer_group").isNull());
         }
 
-        return select.orderBy(AbstractJdbcRepository.field("offset").asc())
-            .limit(configuration.getPollSize())
-            .forUpdate()
-            .skipLocked()
+        var limitSelect = select
+            .orderBy(AbstractJdbcRepository.field("offset").asc())
+            .limit(configuration.getPollSize());
+        ResultQuery<Record2<Object, Object>> configuredSelect = limitSelect;
+
+        if (forUpdate) {
+            configuredSelect = limitSelect.forUpdate().skipLocked();
+        }
+
+        return configuredSelect
             .fetchMany()
-            .get(0);
+            .getFirst();
     }
 
     @SuppressWarnings("RedundantCast")
@@ -89,5 +108,39 @@ public class MysqlQueue<T> extends JdbcQueue<T> {
         }
 
         update.execute();
+    }
+
+    private static final class MysqlQueueConsumers {
+
+        private static final Set<String> CONSUMERS;
+
+        static {
+            CONSUMERS = new HashSet<>();
+            String[] elements = {"indexer", "executor", "worker", "scheduler"};
+            List<String> results = new ArrayList<>();
+            // Generate all combinations and their permutations
+            generateCombinations(elements, new boolean[elements.length], new ArrayList<>(), results);
+            CONSUMERS.addAll(results);
+        }
+
+        public Set<String> allForConsumerNotIn(String consumer) {
+            return CONSUMERS.stream().filter(s -> !s.contains(consumer)).collect(Collectors.toSet());
+        }
+
+        private static void generateCombinations(String[] elements, boolean[] used, List<String> current, List<String> results) {
+            if (!current.isEmpty()) {
+                results.add(String.join(",", current));
+            }
+
+            for (int i = 0; i < elements.length; i++) {
+                if (!used[i]) {
+                    used[i] = true;
+                    current.add(elements[i]);
+                    generateCombinations(elements, used, current, results);
+                    current.removeLast();
+                    used[i] = false;
+                }
+            }
+        }
     }
 }
