@@ -1,5 +1,6 @@
 package io.kestra.repository.postgres;
 
+import com.google.common.collect.ImmutableMap;
 import io.kestra.core.queues.QueueService;
 import io.kestra.core.repositories.ArrayListTotal;
 import io.kestra.jdbc.JdbcMapper;
@@ -21,6 +22,7 @@ import org.jooq.Result;
 import org.jooq.SelectConditionStep;
 import org.jooq.impl.DSL;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import jakarta.annotation.Nullable;
@@ -46,21 +48,20 @@ public class PostgresRepository<T> extends io.kestra.jdbc.AbstractJdbcRepository
             throw new IllegalArgumentException("Invalid fullTextCondition" + fields);
         }
 
-        return DSL.condition(fields.get(0) + " @@ FULLTEXT_SEARCH(?)", query);
+        return DSL.condition(fields.getFirst() + " @@ FULLTEXT_SEARCH(?)", query);
     }
 
     @SneakyThrows
     @Override
     public Map<Field<Object>, Object> persistFields(T entity) {
-        Map<Field<Object>, Object> fields = super.persistFields(entity);
-
         String json = JdbcMapper.of().writeValueAsString(entity);
-        fields.replace(AbstractJdbcRepository.field("value"), DSL.val(JSONB.valueOf(json)));
-
-        return fields;
+        return new HashMap<>(ImmutableMap
+            .of(io.kestra.jdbc.repository.AbstractJdbcRepository.field("value"), DSL.val(JSONB.valueOf(json)))
+        );
     }
 
     @SneakyThrows
+    @Override
     public void persist(T entity, DSLContext context, @Nullable  Map<Field<Object>, Object> fields) {
         Map<Field<Object>, Object> finalFields = fields == null ? this.persistFields(entity) : fields;
 
@@ -75,6 +76,7 @@ public class PostgresRepository<T> extends io.kestra.jdbc.AbstractJdbcRepository
     }
 
     @SuppressWarnings("unchecked")
+    @Override
     public <R extends Record, E> ArrayListTotal<E> fetchPage(DSLContext context, SelectConditionStep<R> select, Pageable pageable, RecordMapper<R, E> mapper) {
         Result<Record> results = this.limit(
             context.select(DSL.asterisk(), DSL.count().over().as("total_count"))
@@ -87,11 +89,20 @@ public class PostgresRepository<T> extends io.kestra.jdbc.AbstractJdbcRepository
         )
             .fetch();
 
-        Integer totalCount = results.size() > 0 ? results.get(0).get("total_count", Integer.class) : 0;
+        Integer totalCount = results.size() > 0 ? results.getFirst().get("total_count", Integer.class) : 0;
 
         List<E> map = results
             .map((Record record) -> mapper.map((R) record));
 
         return new ArrayListTotal<>(map, totalCount);
+    }
+
+    @Override
+    public <R extends Record> T map(R record) {
+        if (deserializer != null) {
+            return deserializer.apply(record);
+        } else {
+            return this.deserialize(record.get("value", JSONB.class).data());
+        }
     }
 }
