@@ -26,7 +26,6 @@ import java.time.ZonedDateTime;
 import java.time.temporal.TemporalAdjusters;
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public abstract class AbstractJdbcRepository<T> {
@@ -45,6 +44,7 @@ public abstract class AbstractJdbcRepository<T> {
     @Getter
     protected Table<Record> table;
 
+    @SuppressWarnings("unchecked")
     public AbstractJdbcRepository(
         JdbcTableConfig tableConfig,
         QueueService queueService,
@@ -70,7 +70,7 @@ public abstract class AbstractJdbcRepository<T> {
     @SneakyThrows
     public Map<Field<Object>, Object> persistFields(T entity) {
         return new HashMap<>(ImmutableMap
-            .of(io.kestra.jdbc.repository.AbstractJdbcRepository.field("value"), JdbcMapper.of().writeValueAsString(entity))
+            .of(io.kestra.jdbc.repository.AbstractJdbcRepository.field("value"), MAPPER.writeValueAsString(entity))
         );
     }
 
@@ -210,7 +210,7 @@ public abstract class AbstractJdbcRepository<T> {
                     return r.substring(0, i) + "[mark]" + r.substring(i, i + query.length()) + "[/mark]" + r.substring(i + query.length());
                 }
             })
-            .collect(Collectors.toList());
+            .toList();
 
         return Collections.singletonList(String.join("\n", fragments));
     }
