@@ -9,7 +9,6 @@ import io.kestra.core.utils.DateUtils;
 import io.kestra.jdbc.runner.JdbcIndexerInterface;
 import io.micronaut.data.model.Pageable;
 import jakarta.annotation.Nullable;
-import jakarta.inject.Singleton;
 import org.jooq.Record;
 import org.jooq.*;
 import org.jooq.impl.DSL;
@@ -25,7 +24,6 @@ import java.util.Comparator;
 import java.util.*;
 import java.util.stream.Collectors;
 
-@Singleton
 public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository implements LogRepositoryInterface, JdbcIndexerInterface<LogEntry> {
     protected io.kestra.jdbc.AbstractJdbcRepository<LogEntry> jdbcRepository;
 
@@ -35,12 +33,14 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
 
     abstract protected Condition findCondition(String query);
 
+    @Override
     public ArrayListTotal<LogEntry> find(
         Pageable pageable,
         @Nullable String query,
         @Nullable String tenantId,
         @Nullable String namespace,
         @Nullable String flowId,
+        @Nullable String triggerId,
         @Nullable Level minLevel,
         @Nullable ZonedDateTime startDate,
         @Nullable ZonedDateTime endDate
@@ -52,11 +52,11 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
 
                 SelectConditionStep<Record1<Object>> select = context
                     .select(field("value"))
-                    .hint(configuration.dialect() == SQLDialect.MYSQL ? "SQL_CALC_FOUND_ROWS" : null)
+                    .hint(context.configuration().dialect().supports(SQLDialect.MYSQL) ? "SQL_CALC_FOUND_ROWS" : null)
                     .from(this.jdbcRepository.getTable())
                     .where(this.defaultFilter(tenantId));
 
-                this.filter(select, query, namespace, flowId, minLevel, startDate , endDate);
+                this.filter(select, query, namespace, flowId, triggerId, minLevel, startDate , endDate);
 
                 return this.jdbcRepository.fetchPage(context, select, pageable);
             });
@@ -67,16 +67,21 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
         @Nullable String query,
         @Nullable String namespace,
         @Nullable String flowId,
+        @Nullable String triggerId,
         @Nullable Level minLevel,
         @Nullable ZonedDateTime startDate,
         @Nullable ZonedDateTime endDate
     ) {
         if (namespace != null) {
-            select.and(DSL.or(field("namespace").eq(namespace), field("namespace").likeIgnoreCase(namespace + ".%")));
+            select = select.and(DSL.or(field("namespace").eq(namespace), field("namespace").likeIgnoreCase(namespace + ".%")));
         }
 
         if (flowId != null) {
-            select.and(field("flow_id").eq(flowId));
+            select = select.and(field("flow_id").eq(flowId));
+        }
+
+        if (triggerId != null) {
+            select = select.and(field("trigger_id").eq(triggerId));
         }
 
         if (minLevel != null) {
@@ -98,6 +103,7 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
         return select;
     }
 
+    @Override
     public List<LogStatistics> statistics(
         @Nullable String query,
         @Nullable String tenantId,
@@ -116,11 +122,10 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
 
         List<Field<?>> dateFields = new ArrayList<>(groupByFields(Duration.between(finalStartDate, finalEndDate), "timestamp", groupBy));
         List<Field<?>> selectFields = new ArrayList<>(fields);
-        selectFields.addAll(List.of(
+        selectFields.add(
             DSL.count().as("count")
-        ));
-
-        selectFields.addAll(dateFields);
+        );
+        selectFields.addAll(groupByFields(Duration.between(finalStartDate, finalEndDate), "timestamp", groupBy, true));
 
         return this.jdbcRepository
             .getDslContextWrapper()
@@ -132,7 +137,7 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
                     .from(this.jdbcRepository.getTable())
                     .where(this.defaultFilter(tenantId));
 
-                this.filter(select, query, namespace, flowId, minLevel, startDate, endDate);
+                this.filter(select, query, namespace, flowId, null, minLevel, startDate, endDate);
 
                 List<Field<?>> groupFields = new ArrayList<>(fields);
                 groupFields.addAll(dateFields);
@@ -211,7 +216,7 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
                         .flatMap(levelLongMap -> levelLongMap.entrySet().stream())
                         .collect(Collectors.groupingBy(Map.Entry::getKey, Collectors.summingLong(Map.Entry::getValue)));
 
-                    return logStatistics.get(0).toBuilder().counts(collect).build();
+                    return logStatistics.getFirst().toBuilder().counts(collect).build();
                 })
                 .findFirst()
                 .orElse(LogStatistics.builder().timestamp(currentDate.toInstant()).groupBy(groupByType.val()).build());
@@ -371,22 +376,75 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
                     .and(field("execution_id").eq(executionId));
 
                 if (taskId != null) {
-                    delete.and(field("task_id").eq(taskId));
+                    delete = delete.and(field("task_id").eq(taskId));
                 }
 
                 if (taskRunId != null) {
-                    delete.and(field("taskrun_id").eq(taskRunId));
+                    delete = delete.and(field("taskrun_id").eq(taskRunId));
                 }
 
                 if (minLevel != null) {
-                    delete.and(minLevel(minLevel));
+                    delete = delete.and(minLevel(minLevel));
                 }
 
                 if (attempt != null) {
-                    delete.and(field("attempt_number").eq(attempt));
+                    delete = delete.and(field("attempt_number").eq(attempt));
                 }
 
                 delete.execute();
+            });
+    }
+
+    @Override
+    public void deleteByQuery(String tenantId, String namespace, String flowId, String triggerId) {
+        this.jdbcRepository
+            .getDslContextWrapper()
+            .transaction(configuration -> {
+                DSLContext context = DSL.using(configuration);
+
+                var delete = context
+                    .delete(this.jdbcRepository.getTable())
+                    .where(this.defaultFilter(tenantId))
+                    .and(field("namespace").eq(namespace))
+                    .and(field("flow_id").eq(flowId));
+
+                if (triggerId != null) {
+                    delete = delete.and(field("trigger_id").eq(triggerId));
+                }
+
+                delete.execute();
+            });
+    }
+
+    @Override
+    public int deleteByQuery(String tenantId, String namespace, String flowId, List<Level> logLevels, ZonedDateTime startDate, ZonedDateTime endDate) {
+        return this.jdbcRepository
+            .getDslContextWrapper()
+            .transactionResult(configuration -> {
+                DSLContext context = DSL.using(configuration);
+
+                var delete = context
+                    .delete(this.jdbcRepository.getTable())
+                    .where(this.defaultFilter(tenantId))
+                    .and(field("timestamp").lessOrEqual(endDate.toOffsetDateTime()));
+
+                if (startDate != null) {
+                    delete = delete.and(field("timestamp").greaterOrEqual(startDate.toOffsetDateTime()));
+                }
+
+                if (namespace != null) {
+                    delete = delete.and(field("namespace").eq(namespace));
+                }
+
+                if (flowId != null) {
+                    delete = delete.and(field("flow_id").eq(flowId));
+                }
+
+                if (logLevels != null) {
+                    delete = delete.and(levelsCondition(logLevels));
+                }
+
+                return delete.execute();
             });
     }
 
@@ -398,14 +456,14 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
 
                 SelectConditionStep<Record1<Object>> select = context
                     .select(field("value"))
-                    .hint(configuration.dialect() == SQLDialect.MYSQL ? "SQL_CALC_FOUND_ROWS" : null)
+                    .hint(context.configuration().dialect().supports(SQLDialect.MYSQL) ? "SQL_CALC_FOUND_ROWS" : null)
                     .from(this.jdbcRepository.getTable())
                     .where(this.defaultFilter(tenantId));
 
                 select = select.and(condition);
 
                 if (minLevel != null) {
-                    select.and(minLevel(minLevel));
+                    select = select.and(minLevel(minLevel));
                 }
 
                 return this.jdbcRepository.fetchPage(context, select, pageable
@@ -426,7 +484,7 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
                 select = select.and(condition);
 
                 if (minLevel != null) {
-                    select.and(minLevel(minLevel));
+                    select = select.and(minLevel(minLevel));
                 }
 
                 return this.jdbcRepository.fetch(select
@@ -435,7 +493,11 @@ public abstract class AbstractJdbcLogRepository extends AbstractJdbcRepository i
             });
     }
 
-    protected Condition minLevel(Level minLevel) {
-        return field("level").in(LogEntry.findLevelsByMin(minLevel));
+    private Condition minLevel(Level minLevel) {
+        return levelsCondition(LogEntry.findLevelsByMin(minLevel));
+    }
+
+    protected Condition levelsCondition(List<Level> levels) {
+        return field("level").in(levels.stream().map(level -> level.name()).toList());
     }
 }
