@@ -2,9 +2,15 @@ package io.kestra.webserver.controllers.api;
 
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.statistics.DailyExecutionStatistics;
+import io.kestra.core.models.executions.statistics.ExecutionCountStatistics;
 import io.kestra.core.models.executions.statistics.LogStatistics;
+import io.kestra.core.models.flows.FlowScope;
+import io.kestra.core.models.flows.State;
+import io.kestra.core.models.stats.SummaryStatistics;
 import io.kestra.core.repositories.ExecutionRepositoryInterface;
+import io.kestra.core.repositories.FlowRepositoryInterface;
 import io.kestra.core.repositories.LogRepositoryInterface;
+import io.kestra.core.repositories.TriggerRepositoryInterface;
 import io.kestra.core.tenant.TenantService;
 import io.micronaut.core.annotation.Introspected;
 import io.micronaut.core.annotation.Nullable;
@@ -25,6 +31,7 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 @Validated
 @Controller("/api/v1/stats")
@@ -36,7 +43,23 @@ public class StatsController {
     protected LogRepositoryInterface logRepositoryInterface;
 
     @Inject
+    protected FlowRepositoryInterface flowRepositoryInterface;
+
+    @Inject
+    protected TriggerRepositoryInterface triggerRepositoryInterface;
+
+    @Inject
     private TenantService tenantService;
+
+    @ExecuteOn(TaskExecutors.IO)
+    @Post(uri = "summary")
+    @Operation(tags = {"Stats"}, summary = "Get summary statistics")
+    public SummaryStatistics summary(@Body @Valid SummaryRequest request) {
+        return new SummaryStatistics(
+            flowRepositoryInterface.countForNamespace(tenantService.resolveTenant(), request.namespace()),
+            triggerRepositoryInterface.countForNamespace(tenantService.resolveTenant(), request.namespace())
+        );
+    }
 
     @ExecuteOn(TaskExecutors.IO)
     @Post(uri = "executions/daily")
@@ -46,13 +69,14 @@ public class StatsController {
         return executionRepository.dailyStatistics(
             statisticRequest.q(),
             tenantService.resolveTenant(),
+            statisticRequest.scope(),
             statisticRequest.namespace(),
             statisticRequest.flowId(),
             statisticRequest.startDate() != null ? statisticRequest.startDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
             statisticRequest.endDate() != null ? statisticRequest.endDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
             null,
-            false
-        );
+            statisticRequest.state(),
+            false);
     }
 
     @ExecuteOn(TaskExecutors.IO)
@@ -62,13 +86,14 @@ public class StatsController {
         return executionRepository.dailyStatistics(
             statisticRequest.q(),
             tenantService.resolveTenant(),
+            statisticRequest.scope(),
             statisticRequest.namespace(),
             statisticRequest.flowId(),
             statisticRequest.startDate() != null ? statisticRequest.startDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
             statisticRequest.endDate() != null ? statisticRequest.endDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
             null,
-            true
-        );
+            statisticRequest.state(),
+            true);
     }
 
     @ExecuteOn(TaskExecutors.IO)
@@ -80,10 +105,22 @@ public class StatsController {
             tenantService.resolveTenant(),
             statisticRequest.namespace(),
             statisticRequest.flowId(),
-            statisticRequest.flows() != null && statisticRequest.flows().get(0).getNamespace() != null && statisticRequest.flows().get(0).getId() != null ? statisticRequest.flows() : null,
+            statisticRequest.flows() != null && statisticRequest.flows().getFirst().getNamespace() != null && statisticRequest.flows().getFirst().getId() != null ? statisticRequest.flows() : null,
             statisticRequest.startDate() != null ? statisticRequest.startDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
             statisticRequest.endDate() != null ? statisticRequest.endDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
             Boolean.TRUE.equals(statisticRequest.namespaceOnly())
+        );
+    }
+
+    @ExecuteOn(TaskExecutors.IO)
+    @Post(uri = "executions/daily/group-by-namespace")
+    @Operation(tags = {"Stats"}, summary = "Get daily statistics for executions grouped by namespace")
+    public Map<String, ExecutionCountStatistics> dailyStatisticsGroupByNamespace(@Body @Valid ByNamespaceStatisticRequest request) {
+        return executionRepository.executionCountsGroupedByNamespace(
+            tenantService.resolveTenant(),
+            request.namespace(),
+            request.startDate() != null ? request.startDate().withZoneSameInstant(ZoneId.systemDefault()) : null,
+            request.endDate() != null ? request.endDate().withZoneSameInstant(ZoneId.systemDefault()) : null
         );
     }
 
@@ -95,7 +132,7 @@ public class StatsController {
     ) {
         return executionRepository.lastExecutions(
             tenantService.resolveTenant(),
-            lastExecutionsRequest.flows() != null && lastExecutionsRequest.flows().get(0).getNamespace() != null && lastExecutionsRequest.flows().get(0).getId() != null ? lastExecutionsRequest.flows() : null
+            lastExecutionsRequest.flows() != null && lastExecutionsRequest.flows().getFirst().getNamespace() != null && lastExecutionsRequest.flows().getFirst().getId() != null ? lastExecutionsRequest.flows() : null
         );
     }
 
@@ -116,12 +153,22 @@ public class StatsController {
     }
 
     @Introspected
+    public record SummaryRequest(
+        @Parameter(description = "A namespace filter prefix") @Nullable String namespace,
+        @Parameter(description = "The start datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]") ZonedDateTime startDate,
+        @Parameter(description = "The end datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]")ZonedDateTime endDate
+    ) {}
+
+
+    @Introspected
     public record StatisticRequest(
         @Parameter(description = "A string filter") @Nullable String q,
+        @Parameter(description = "The scope of the executions to include") @Nullable List<FlowScope> scope,
         @Parameter(description = "A namespace filter prefix") @Nullable String namespace,
         @Parameter(description = "A flow id filter") @Nullable String flowId,
         @Parameter(description = "The start datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]") ZonedDateTime startDate,
-        @Parameter(description = "The end datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]")ZonedDateTime endDate
+        @Parameter(description = "The end datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]")ZonedDateTime endDate,
+        @Parameter(description = "the state of the execution") @Nullable List<State.Type> state
     ) {}
 
     @Introspected
@@ -130,6 +177,13 @@ public class StatsController {
         @Parameter(description = "A namespace filter prefix") @Nullable String namespace,
         @Parameter(description = "A flow id filter") @Nullable String flowId,
         @Parameter(description = "A log level filter") @Nullable Level logLevel,
+        @Parameter(description = "The start datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]") ZonedDateTime startDate,
+        @Parameter(description = "The end datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]")ZonedDateTime endDate
+    ) {}
+
+    @Introspected
+    public record ByNamespaceStatisticRequest(
+        @Parameter(description = "A namespace filter prefix") @Nullable String namespace,
         @Parameter(description = "The start datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]") ZonedDateTime startDate,
         @Parameter(description = "The end datetime, default to now") @Nullable @Format("yyyy-MM-dd'T'HH:mm[:ss][.SSS][XXX]")ZonedDateTime endDate
     ) {}
