@@ -29,6 +29,8 @@ import jakarta.inject.Inject;
 
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
+
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.*;
@@ -68,8 +70,8 @@ public class TemplateController {
     @Get(uri = "/search")
     @Operation(tags = {"Templates"}, summary = "Search for templates")
     public PagedResults<Template> find(
-        @Parameter(description = "The current page") @QueryValue(defaultValue = "1") int page,
-        @Parameter(description = "The current page size") @QueryValue(defaultValue = "10") int size,
+        @Parameter(description = "The current page") @QueryValue(defaultValue = "1") @Min(1) int page,
+        @Parameter(description = "The current page size") @QueryValue(defaultValue = "10") @Min(1) int size,
         @Parameter(description = "The sort of current page") @Nullable @QueryValue List<String> sort,
         @Parameter(description = "A string filter") @Nullable @QueryValue(value = "q") String query,
         @Parameter(description = "A namespace filter prefix") @Nullable @QueryValue String namespace
@@ -183,7 +185,7 @@ public class TemplateController {
             .stream()
             .map(Template::getId)
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
         if (duplicate.size() < templates.size()) {
             throw new ConstraintViolationException(Collections.singleton(ManualConstraintViolation.of(
@@ -209,7 +211,7 @@ public class TemplateController {
                 .stream()
                 .filter(template -> !ids.contains(template.getId()))
                 .peek(template -> templateRepository.delete(template))
-                .collect(Collectors.toList());
+                .toList();
         }
 
         // update or create templates
@@ -225,7 +227,7 @@ public class TemplateController {
             })
             .toList();
 
-        return Stream.concat(deleted.stream(), updatedOrCreated.stream()).collect(Collectors.toList());
+        return Stream.concat(deleted.stream(), updatedOrCreated.stream()).toList();
     }
 
 
@@ -282,7 +284,7 @@ public class TemplateController {
     ) throws IOException {
         var templates = ids.stream()
             .map(id -> templateRepository.findById(tenantService.resolveTenant(), id.getNamespace(), id.getId()).orElseThrow())
-            .collect(Collectors.toList());
+            .toList();
         var bytes = zipTemplates(templates);
         return HttpResponse.ok(bytes).header("Content-Disposition", "attachment; filename=\"templates.zip\"");
     }
@@ -301,7 +303,7 @@ public class TemplateController {
             .find(tenantService.resolveTenant(), query, namespace)
             .stream()
             .peek(templateRepository::delete)
-            .collect(Collectors.toList());
+            .toList();
 
         return HttpResponse.ok(BulkResponse.builder().count(list.size()).build());
     }
